update and fix dois

--- a/assets/sass/components/_pubcards.scss
+++ b/assets/sass/components/_pubcards.scss
@@ -1,7 +1,7 @@
 .buttonlink {
   // white-space:nowrap;
 
-  display: inline-table;
+  //display: inline-block;
   margin: var(--gap-4xs);
   margin-bottom: var(--gap-3xs);
 
