--- a/src/publications/articles/2012-LM-Inert-Vs-Living/index.njk
+++ b/src/publications/articles/2012-LM-Inert-Vs-Living/index.njk
@@ -307,14 +307,14 @@ excerpt: The physical singularity of life phenomena is analyzed by a comparison 
 <p class="ReferencesCopy2">
     <a href="http://www.ncbi.nlm.nih.gov/sites/entrez?Db=pubmed&amp;Cmd=ShowDetailView&amp;TermToSearch=8266743" target="_blank" rel="noopener">Pubmed Abstract</a> |
     <a href="http://eutils.ncbi.nlm.nih.gov/entrez/eutils/elink.fcgi?db=pubmed&amp;cmd=prlinks&amp;retmode=ref&amp;id=8266743" target="_blank" rel="noopener">Pubmed Full Text</a> |
-    <a href="http://dx.doi.org/10.1007/BF00712769" target="_blank" rel="noopener">CrossRef Full Text</a>
+    doi: <a href="https://doi.org/10.1007/BF00712769" target="_blank" rel="noopener">10.1007/BF00712769</a>
   </p>
 </li>
 <li  class="bibitem" id="B3">Bailly, F., and Longo, G. (2008). Extended critical situations: the physical singularity of life phenomena. <i>J. Biol. Syst.</i> 16, 309.
-<p class="ReferencesCopy2"><a href="http://dx.doi.org/10.1142/S0218339008002514" target="_blank" rel="noopener">CrossRef Full Text</a></p>
+doi: <a href="https://doi.org/10.1142/S0218339008002514" target="_blank" rel="noopener">10.1142/S0218339008002514</a>
 </li>
 <li  class="bibitem" id="B4">Bailly, F., and Longo, G. (2009). Biological organization and anti-entropy. <i>J. Biol. Syst.</i> 17, 63–96.
-<p class="ReferencesCopy2"><a href="http://dx.doi.org/10.1142/S0218339009002715" target="_blank" rel="noopener">CrossRef Full Text</a></p>
+doi: <a href="https://doi.org/10.1142/S0218339009002715" target="_blank" rel="noopener">10.1142/S0218339009002715</a>
 </li>
 <li  class="bibitem" id="B5">Bailly, F., and Longo, G. (2011). <i>Mathematics and the Natural Sciences: The Physical Singularity of Life</i>. London: Imperial College Press. [Preliminary version in French: Hermann].
 </li>
@@ -322,14 +322,14 @@ excerpt: The physical singularity of life phenomena is analyzed by a comparison 
 <p class="ReferencesCopy2">
     <a href="http://www.ncbi.nlm.nih.gov/sites/entrez?Db=pubmed&amp;Cmd=ShowDetailView&amp;TermToSearch=21316386" target="_blank" rel="noopener">Pubmed Abstract</a> |
     <a href="http://eutils.ncbi.nlm.nih.gov/entrez/eutils/elink.fcgi?db=pubmed&amp;cmd=prlinks&amp;retmode=ref&amp;id=21316386" target="_blank" rel="noopener">Pubmed Full Text</a> |
-    <a href="http://dx.doi.org/10.1016/j.pbiomolbio.2011.02.001" target="_blank" rel="noopener">CrossRef Full Text</a>
+    doi: <a href="https://doi.org/10.1016/j.pbiomolbio.2011.02.001" target="_blank" rel="noopener">10.1016/j.pbiomolbio.2011.02.001</a>
   </p>
 </li>
 <li  class="bibitem" id="B7">Bak, P., Tang, C., and Wiesenfeld, K. (1988). Self-organized criticality. <i>Phys. Rev. A</i> 38, 364–374.
 <p class="ReferencesCopy2">
     <a href="http://www.ncbi.nlm.nih.gov/sites/entrez?Db=pubmed&amp;Cmd=ShowDetailView&amp;TermToSearch=9900174" target="_blank" rel="noopener">Pubmed Abstract</a> |
     <a href="http://eutils.ncbi.nlm.nih.gov/entrez/eutils/elink.fcgi?db=pubmed&amp;cmd=prlinks&amp;retmode=ref&amp;id=9900174" target="_blank" rel="noopener">Pubmed Full Text</a> |
-    <a href="http://dx.doi.org/10.1103/PhysRevA.38.364" target="_blank" rel="noopener">CrossRef Full Text</a>
+    doi: <a href="https://doi.org/10.1103/PhysRevA.38.364" target="_blank" rel="noopener">10.1103/PhysRevA.38.364</a>
   </p>
 </li>
 <li  class="bibitem" id="B8">Binney, J., Dowrick, N. J., Fisher, A. J., and Newman, M. E. J. (1992). <i>The Theory of Critical Phenomena: An Introduction to the Renormalization Group</i>. New York: Oxford University Press.
@@ -342,7 +342,7 @@ excerpt: The physical singularity of life phenomena is analyzed by a comparison 
 <p class="ReferencesCopy2">
     <a href="http://www.ncbi.nlm.nih.gov/sites/entrez?Db=pubmed&amp;Cmd=ShowDetailView&amp;TermToSearch=12079523" target="_blank" rel="noopener">Pubmed Abstract</a> |
     <a href="http://eutils.ncbi.nlm.nih.gov/entrez/eutils/elink.fcgi?db=pubmed&amp;cmd=prlinks&amp;retmode=ref&amp;id=12079523" target="_blank" rel="noopener">Pubmed Full Text</a> |
-    <a href="http://dx.doi.org/10.1098/rstb.2001.0993" target="_blank" rel="noopener">CrossRef Full Text</a>
+    doi: <a href="https://doi.org/10.1098/rstb.2001.0993" target="_blank" rel="noopener">10.1098/rstb.2001.0993</a>
   </p>
 </li>
 <li  class="bibitem" id="B11">Frege, G. (1984). <i>Collected Papers on Mathematics, Logic and Philosophy</i>. Oxford: Basil Blackwell. [trans. Max Black].
@@ -352,7 +352,7 @@ excerpt: The physical singularity of life phenomena is analyzed by a comparison 
 <li  class="bibitem" id="B13">Gould, S. J. (1997). <i>Full House: The Spread of Excellence from Plato to Darwin</i>. New York: Three Rivers Press.
 </li>
 <li  class="bibitem" id="B14">Grigolini, P., Aquino, G., Bologna, M., Lukovic, M., and West, B. J. (2009). A theory of noise in human cognition. <i>Physica A</i> 388, 4192–4204.
-<p class="ReferencesCopy2"><a href="http://dx.doi.org/10.1016/j.physa.2009.06.024" target="_blank" rel="noopener">CrossRef Full Text</a></p>
+doi: <a href="https://doi.org/10.1016/j.physa.2009.06.024" target="_blank" rel="noopener">10.1016/j.physa.2009.06.024</a>
 </li>
 <li  class="bibitem" id="B15">Jensen, H. J. (1998). <i>Self-Organized Criticality, Emergent Complex Behavior in Physical and Biological Systems</i>. Cambridge: Cambridge lectures in Physics.
 </li>
@@ -367,23 +367,23 @@ excerpt: The physical singularity of life phenomena is analyzed by a comparison 
 <li  class="bibitem" id="B19">Longo, G. (2011). “Interfaces de l’incomplétude,” in <i>Les Mathématiques</i>, (Paris: Editions du CNRS). [Originale in Italiano per “La Matematica”, Vol. 4, Einaudi, 2010].
 </li>
 <li  class="bibitem" id="B20">Longo, G., and Montévil, M. (2011a). From physics to biology by extending criticality and symmetry breakings. <i>Prog. Biophys. Mol. Biol.</i> 106, 340–347.
-<p class="ReferencesCopy2"><a href="http://dx.doi.org/10.1016/j.pbiomolbio.2011.03.005" target="_blank" rel="noopener">CrossRef Full Text</a></p>
+doi: <a href="https://doi.org/10.1016/j.pbiomolbio.2011.03.005" target="_blank" rel="noopener">10.1016/j.pbiomolbio.2011.03.005</a>
 </li>
 <li  class="bibitem" id="B21">Longo, G., and Montévil, M. (2011b). Protention and retention in biological systems. <i>Theory Biosci.</i> 130, 107–117.
-<p class="ReferencesCopy2"><a href="http://dx.doi.org/10.1007/s12064-010-0116-6" target="_blank" rel="noopener">CrossRef Full Text</a></p>
+doi: <a href="https://doi.org/10.1007/s12064-010-0116-6" target="_blank" rel="noopener">10.1007/s12064-010-0116-6</a>
 </li>
 <li  class="bibitem" id="B22">Longo, G., Montévil, M., and Kauffman, S. (2012). “No entailing laws, but enablement in the evolution of the biosphere,” in <i>GECCO Proceedings 2012</i>, Arxiv 1201.2069.
 </li>
 <li  class="bibitem" id="B23">Marker, D. (2002). <i>Model Theory: An Introduction</i>. New York: Springer Verlag.
 </li>
 <li  class="bibitem" id="B24">Mora, T., and Bialek, W. (2011). Are biological systems poised at criticality? <i>J. Stat. Phys.</i> 144, 268–302.
-<p class="ReferencesCopy2"><a href="http://dx.doi.org/10.1007/s10955-011-0229-4" target="_blank" rel="noopener">CrossRef Full Text</a></p>
+doi: <a href="https://doi.org/10.1007/s10955-011-0229-4" target="_blank" rel="noopener">10.1007/s10955-011-0229-4</a>
 </li>
 <li  class="bibitem" id="B25">Mossio, M., Longo, G., and Stewart, J. (2009). A computable expression of closure to efficient causation. <i>J. Theor. Biol.</i> 257, 489–498.
 <p class="ReferencesCopy2">
     <a href="http://www.ncbi.nlm.nih.gov/sites/entrez?Db=pubmed&amp;Cmd=ShowDetailView&amp;TermToSearch=19168079" target="_blank" rel="noopener">Pubmed Abstract</a> |
     <a href="http://eutils.ncbi.nlm.nih.gov/entrez/eutils/elink.fcgi?db=pubmed&amp;cmd=prlinks&amp;retmode=ref&amp;id=19168079" target="_blank" rel="noopener">Pubmed Full Text</a> |
-    <a href="http://dx.doi.org/10.1016/j.jtbi.2008.12.012" target="_blank" rel="noopener">CrossRef Full Text</a>
+    doi: <a href="https://doi.org/10.1016/j.jtbi.2008.12.012" target="_blank" rel="noopener">10.1016/j.jtbi.2008.12.012</a>
   </p>
 </li>
 <li  class="bibitem" id="B26" ></a>Nykter, M., Price, N. D., Aldana, M., Ramsey, S. A., Kauffman, S. A., Hood, L. E., Yli-Harja, O., and Shmulevich, I. (2008). Gene expression dynamics in the macrophage exhibit criticality.
@@ -392,7 +392,7 @@ excerpt: The physical singularity of life phenomena is analyzed by a comparison 
 <p class="ReferencesCopy2">
     <a href="http://www.ncbi.nlm.nih.gov/sites/entrez?Db=pubmed&amp;Cmd=ShowDetailView&amp;TermToSearch=18250330" target="_blank" rel="noopener">Pubmed Abstract</a> |
     <a href="http://eutils.ncbi.nlm.nih.gov/entrez/eutils/elink.fcgi?db=pubmed&amp;cmd=prlinks&amp;retmode=ref&amp;id=18250330" target="_blank" rel="noopener">Pubmed Full Text</a> |
-    <a href="http://dx.doi.org/10.1073/pnas.0711525105" target="_blank" rel="noopener">CrossRef Full Text</a>
+    doi: <a href="https://doi.org/10.1073/pnas.0711525105" target="_blank" rel="noopener">10.1073/pnas.0711525105</a>
   </p>
 </li>
 <li  class="bibitem" id="B27">Rosen, R. (1991). <i>Life Itself: A Comprehensive Inquiry into the Nature, Origin, and Fabrication of Life</i>. New York: Columbia University Press.
@@ -406,7 +406,7 @@ excerpt: The physical singularity of life phenomena is analyzed by a comparison 
 <li  class="bibitem" id="B31">Van Fraassen, B. C. (1989). <i>Laws and Symmetry</i>. Oxford: Oxford University Press.
 </li>
 <li  class="bibitem" id="B32">Varela, F. G., Maturana, H. R., and Uribe, R. (1974). Autopoiesis: the organization of living systems, its characterization and a model. <i>BioSystems</i> 5, 187–196.
-<p class="ReferencesCopy2"><a href="http://dx.doi.org/10.1016/0303-2647(74)90031-8" target="_blank" rel="noopener">CrossRef Full Text</a></p>
+doi: <a href="https://doi.org/10.1016/0303-2647(74)90031-8" target="_blank" rel="noopener">10.1016/0303-2647(74)90031-8</a>
 </li>
 <li  class="bibitem" id="B33">Varela, F. J. (1989). <i>Autonomie et connaissance</i>. Paris: Seuil.
 </li>
@@ -425,7 +425,7 @@ excerpt: The physical singularity of life phenomena is analyzed by a comparison 
 <p class="ReferencesCopy2">
     <a href="http://www.ncbi.nlm.nih.gov/sites/entrez?Db=pubmed&amp;Cmd=ShowDetailView&amp;TermToSearch=9082983" target="_blank" rel="noopener">Pubmed Abstract</a> |
     <a href="http://eutils.ncbi.nlm.nih.gov/entrez/eutils/elink.fcgi?db=pubmed&amp;cmd=prlinks&amp;retmode=ref&amp;id=9082983" target="_blank" rel="noopener">Pubmed Full Text</a> |
-    <a href="http://dx.doi.org/10.1126/science.276.5309.122" target="_blank" rel="noopener">CrossRef Full Text</a>
+    doi: <a href="https://doi.org/10.1126/science.276.5309.122" target="_blank" rel="noopener">10.1126/science.276.5309.122</a>
   </p>
 </li>
 <li  class="bibitem" id="B38">Weyl, H. (1952). <i>Symmetry</i>. Princeton: Princeton University Press.
