--- a/src/publications/articles/2014-PM-Ecological-Models-Cells/index.njk
+++ b/src/publications/articles/2014-PM-Ecological-Models-Cells/index.njk
@@ -3675,8 +3675,8 @@ In the joint paper, we apply these ideas to a situation of gene therapy.</p>
   <li class="bibitem" id="Xcavazzana2005gene">Cavazzana-Calvo M, Lagresle C, Hacein-Bey-Abina S, Fischer A (2005) Gene therapy for severe combined immunodeficiency. Annu Rev Med 56:585–602</li>
   <li class="bibitem" id="XHEP510360211">
     Corbin IR, Buist R, Volotovskyy V, Peeling J, Zhang M, Minuk GY (2002) Regenerative activity and liver function following partial hepatectomy in the rat using
-    31p-mr spectroscopy. Hepatology 36(2):345–353, DOI 10.1053/jhep.2002.34742, URL
-    <a class="url" href="http://dx.doi.org/10.1053/jhep.2002.34742"><span class="ectt-0800">http://dx.doi.org/10.1053/jhep.2002.34742</span></a>
+    31p-mr spectroscopy. Hepatology 36(2):345–353, doi: 
+    <a class="url" href="https://doi.org/10.1053/jhep.2002.34742">10.1053/jhep.2002.34742</a>
   </li>
   <li class="bibitem" id="Xcourchamp1999inverse">Courchamp F, Clutton-Brock T, Grenfell B (1999) Inverse density dependence and the allee effect. Trends in ecology &amp; evolution 14(10):405–410</li>
   <li class="bibitem" id="Xdingli2009dynamics">
@@ -3744,7 +3744,7 @@ In the joint paper, we apply these ideas to a situation of gene therapy.</p>
   </li>
   <li class="bibitem" id="Xpaszek2005tensional">
     Paszek MJ, Zahir N, Johnson KR, Lakins JN, Rozenberg GI, Gefen A, Reinhart-King CA, Margulies SS, Dembo M, Boettiger D, Hammer DA, Weaver VM (XXXX) Tensional
-    homeostasis and the malignant phenotype. Cancer Cell 8(3):241–254, DOI 10.1016/j.ccr.2005.08.010, URL
+    homeostasis and the malignant phenotype. Cancer Cell 8(3):241–254, doi: <a href="https://doi.org/10.1016/j.ccr.2005.08.010">10.1016/j.ccr.2005.08.010</a>, URL
     <a class="url" href="http://www.cell.com/cancer-cell/abstract/S1535-6108(05)00268-0"><span class="ectt-0800">http://www.cell.com/cancer-cell/abstract/S1535-6108(05)00268-0</span></a>
   </li>
   <li class="bibitem" id="Xphillips1996reduction">Phillips AN (1996) Reduction of hiv concentration during acute infection: independence from a specific immune response. Science 271(5248):497–499</li>
