--- a/src/publications/articles/2015-MM-Organisation-Closure-Constraints/index.njk
+++ b/src/publications/articles/2015-MM-Organisation-Closure-Constraints/index.njk
@@ -3097,7 +3097,7 @@ spatial scale). Note that, in this example, the degree of organised complexity o
   </li>
 <li class="bibitem" id="XBergamini2006403"> Bergamini, E. (2006). Autophagy: A cell repair mechanism that retards ageing and age-associated diseases and can be
     intensified pharmacologically. <span class="cmti-10">Molecular Aspects of Medicine</span>, <span class="cmti-10">27</span>, 403 – 410. doi:
-    <a href="http://dx.doi.org/10.1016/j.mam.2006.08.001">10.1016/j.mam.2006.08. 001
+    <a href="https://doi.org/10.1016/j.mam.2006.08.001">10.1016/j.mam.2006.08. 001
 </a>.
   </li>
 <li class="bibitem" id="Xbernard1865introduction"> Bernard, C. (1865). <span class="cmti-10">Introduction à</span>
@@ -3119,7 +3119,7 @@ spatial scale). Note that, in this example, the degree of organised complexity o
   </li>
 <li class="bibitem" id="XFleischaker198837"> Fleischaker, G. R. (1988). Autopoiesis: the status of its system logic. <span class="cmti-10">Biosystems</span>,
     <span class="cmti-10">22</span>, 37 – 49. doi:
-    <a href="http://dx.doi.org/10.1016/0303-2647(88)90048-2">10.1016/0303-2647(88)90048-2
+    <a href="https://doi.org/10.1016/0303-2647(88)90048-2">10.1016/0303-2647(88)90048-2
 </a>.
   </li>
 <li class="bibitem" id="Xfriedberg1995dna"> Friedberg, E. C., Walker, G. C., Siede, W. et al. (1995). <span class="cmti-10">DNA repair and</span>
@@ -3137,42 +3137,42 @@ spatial scale). Note that, in this example, the degree of organised complexity o
 <li class="bibitem" id="Xkauffman2002investigations">Kauffman, S. (2002). <span class="cmti-10">Investigations</span>. Oxford University Press, USA.</li>
 <li class="bibitem" id="XLetelier2011100"> Letelier, J.-C., Cárdenas, M. L., &amp; Cornish-Bowden, A. (2011). From l’homme machine to metabolic closure: Steps
     towards understanding life. <span class="cmti-10">Journal of Theoretical Biology</span>, <span class="cmti-10">286</span>, 100 – 113. doi:
-    <a href="http://dx.doi.org/10.1016/j.jtbi.2011.06.033">10.1016/j.jtbi.2011. 06.033
+    <a href="https://doi.org/10.1016/j.jtbi.2011.06.033">10.1016/j.jtbi.2011. 06.033
 </a>.
   </li>
 <li class="bibitem" id="XLetelier2003261"> Letelier, J. C., Marin, G., &amp; Mpodozis, J. (2003). Autopoietic and (m,r) systems.
     <span class="cmti-10">Journal of Theoretical Biology</span>, <span class="cmti-10">222</span>, 261 – 272. doi:
-    <a href="http://dx.doi.org/10.1016/S0022-5193(03)00034-1">10.1016/ S0022-5193(03)00034-1
+    <a href="https://doi.org/10.1016/S0022-5193(03)00034-1">10.1016/ S0022-5193(03)00034-1
 </a>.
   </li>
 <li class="bibitem" id="XLetelier2006949"> Letelier, J.-C., Soto-Andrade, J., Abarzúa, F. G., Cornish-Bowden, A., &amp; Cárdenas, M. L. (2006).
     Organizational invariance and metabolic closure: Analysis in terms of systems. <span class="cmti-10">Journal of Theoretical Biology</span>, <span class="cmti-10">238</span>, 949 – 961. doi:
-    <a href="http://dx.doi.org/10.1016/j.jtbi.2005.07.007">10.1016/j.jtbi.2005.07.007
+    <a href="https://doi.org/10.1016/j.jtbi.2005.07.007">10.1016/j.jtbi.2005.07.007
 </a>.
   </li>
 <li class="bibitem" id="XLongo2011c"> Longo, G., &amp; Montévil, M. (2011). From physics to biology by extending criticality and symmetry breakings.
     <span class="cmti-10">Progress in Biophysics and Molecular Biology</span>, <span class="cmti-10">106</span>, 340 – 347. doi:
-    <a href="http://dx.doi.org/10.1016/j.pbiomolbio.2011.03.005">10.1016/j.pbiomolbio.2011.03.005
+    <a href="https://doi.org/10.1016/j.pbiomolbio.2011.03.005">10.1016/j.pbiomolbio.2011.03.005
 </a>.
   </li>
 <li class="bibitem" id="Xlongo13"> Longo, G., &amp; Montévil, M. (2013). Extended criticality, phase spaces and enablement in biology.
     <span class="cmti-10">Chaos, Solitons &amp; Fractals</span>, <span class="cmti-10">55</span>, 64 – 79. doi:
-    <a href="http://dx.doi.org/10.1016/j.chaos.2013.03.008">10.1016/j.chaos.2013.03.008
+    <a href="https://doi.org/10.1016/j.chaos.2013.03.008">10.1016/j.chaos.2013.03.008
 </a>.
   </li>
 <li class="bibitem" id="Xlongomont"> Longo, G., &amp; Montévil, M. (2014). <span class="cmti-10">Perspectives on Organisms: Biological</span>
     <span class="cmti-10">time, symmetries and singularities</span>. Lecture Notes in Morphogenesis. Dordrecht: Springer. doi:
-    <a href="http://dx.doi.org/10.1007/978-3-642-35938-5">10.1007/978-3-642-35938-5
+    <a href="https://doi.org/10.1007/978-3-642-35938-5">10.1007/978-3-642-35938-5
 </a>.
   </li>
 <li class="bibitem" id="Xlongo2012b"> Longo, G., Montévil, M., &amp; Kauffman, S. (2012a). No entailing laws, but enablement in the evolution of the biosphere. In
     <span class="cmti-10">Genetic and Evolutionary Computation Conference</span>. GECCO’12 New York, NY, USA: ACM. doi:
-    <a href="http://dx.doi.org/10.1145/2330784.2330946">10.1145/2330784.2330946
+    <a href="https://doi.org/10.1145/2330784.2330946">10.1145/2330784.2330946
 </a>.
   </li>
 <li class="bibitem" id="XLongo_2012_From"> Longo, G., Montévil, M., &amp; Pocheville, A. (2012b). From bottom-up approaches to levels of organization and extended
     critical transitions. <span class="cmti-10">Frontiers in Physiology</span>, <span class="cmti-10">3</span>. doi:
-    <a href="http://dx.doi.org/10.3389/fphys.2012.00232">10.3389/fphys.2012.00232
+    <a href="https://doi.org/10.3389/fphys.2012.00232">10.3389/fphys.2012.00232
 </a>. Invited paper.
   </li>
 <li class="bibitem" id="Xmcmullin2004thirty"> McMullin, B. (2004). Thirty years of computational autopoiesis: A review. <span class="cmti-10">Artificial life</span>,
@@ -3180,7 +3180,7 @@ spatial scale). Note that, in this example, the degree of organised complexity o
   </li>
 <li class="bibitem" id="Xpaageing"> Miquel, P.-A. (2014). Aging as alteration. In R. L., &amp; F. T. (Eds.), <span class="cmti-10">Aging</span>
     <span class="cmti-10">Facts and Theories</span>. Karger volume 39 of <span class="cmti-10">Interdiscipl Top Gerontol. Basel</span>. doi:
-    <a href="http://dx.doi.org/10.1159/000358906">10.1159/000358906
+    <a href="https://doi.org/10.1159/000358906">10.1159/000358906
 </a>.
   </li>
 <li class="bibitem" id="Xmatteobook"> Moreno, A., &amp; Mossio, M. (2015). <span class="cmti-10">Biological autonomy. A Philosophical and</span>
@@ -3188,7 +3188,7 @@ spatial scale). Note that, in this example, the degree of organised complexity o
   </li>
 <li class="bibitem" id="XBergareche199945"> Moreno, A., &amp; Ruiz-Mirazo, K. (1999). Metabolism and the problem of its universalization.
     <span class="cmti-10">Biosystems</span>, <span class="cmti-10">49</span>, 45 – 61. doi:
-    <a href="http://dx.doi.org/10.1016/S0303-2647(98)00034-3">10.1016/S0303-2647(98) 00034-3
+    <a href="https://doi.org/10.1016/S0303-2647(98)00034-3">10.1016/S0303-2647(98) 00034-3
 </a>.
   </li>
 <li class="bibitem" id="XMossio2014"> Mossio, M., &amp; Bich, L. (2014). La circularité biologique: concepts et modèles. In F. Varenne, M. Silberstein,
@@ -3201,7 +3201,7 @@ spatial scale). Note that, in this example, the degree of organised complexity o
   </li>
 <li class="bibitem" id="Xmossio2009organizational"> Mossio, M., Saborido, C., &amp; Moreno, A. (2009). An organizational account of biological functions.
     <span class="cmti-10">The British Journal for the Philosophy of Science</span>, <span class="cmti-10">60</span>, 813–841. doi:
-    <a href="http://dx.doi.org/10.1093/bjps/axp036">10.1093/bjps/axp036
+    <a href="https://doi.org/10.1093/bjps/axp036">10.1093/bjps/axp036
 </a>.
   </li>
 <li class="bibitem" id="XNicolis77"> Nicolis, G., &amp; Prigogine, I. (1977). <span class="cmti-10">Self-organization in non-equilibrium</span>
@@ -3219,7 +3219,7 @@ spatial scale). Note that, in this example, the degree of organised complexity o
   </li>
 <li class="bibitem" id="Xcb2010"> Piedrafita, G., Montero, F., Morán, F., Cárdenas, M. L., &amp; Cornish-Bowden, A. (2010). A simple self-maintaining metabolic
     system: Robustness, autocatalysis, bistability. <span class="cmti-10">PLoS Comput Biol</span>, <span class="cmti-10">6</span>, e1000872. doi:
-    <a href="http://dx.doi.org/10.1371/journal.pcbi.1000872">10.1371/journal.pcbi.1000872
+    <a href="https://doi.org/10.1371/journal.pcbi.1000872">10.1371/journal.pcbi.1000872
 </a>.
   </li>
 <li class="bibitem" id="Xrosen2005"> Rosen, R. (1991). <span class="cmti-10">Life itself: a comprehensive inquiry into the nature, origin,</span>
@@ -3227,24 +3227,24 @@ spatial scale). Note that, in this example, the degree of organised complexity o
   </li>
 <li class="bibitem" id="XRuiz-Mirazo"> Ruiz-Mirazo, K., &amp; Moreno, A. (2004). Basic autonomy as a fundamental step in the synthesis of life.
     <span class="cmti-10">Artif. Life</span>, <span class="cmti-10">10</span>, 235–259. doi:
-    <a href="http://dx.doi.org/10.1162/1064546041255584">10.1162/1064546041255584
+    <a href="https://doi.org/10.1162/1064546041255584">10.1162/1064546041255584
 </a>.
   </li>
 <li class="bibitem" id="Xkepas2004"> Ruiz-Mirazo, K., Peretó, J., &amp; Moreno, A. (2004). A universal definition of life: Autonomy and open-ended evolution.
     <span class="cmti-10">Origins of life and evolution of the biosphere</span>, <span class="cmti-10">34</span>, 323–346. doi:
-    <a href="http://dx.doi.org/10.1023/B:ORIG.0000016440.53346.dc">10.1023/B:ORIG.0000016440.53346.dc
+    <a href="https://doi.org/10.1023/B:ORIG.0000016440.53346.dc">10.1023/B:ORIG.0000016440.53346.dc
 </a>.
   </li>
 <li class="bibitem" id="XSaborido01092011"> Saborido, C., Mossio, M., &amp; Moreno, A. (2011). Biological organization and cross-generation functions.
     <span class="cmti-10">The British Journal for the Philosophy of Science</span>, <span class="cmti-10">62</span>, 583–606. doi:
-    <a href="http://dx.doi.org/10.1093/bjps/axq034">10.1093/bjps/axq034
+    <a href="https://doi.org/10.1093/bjps/axq034">10.1093/bjps/axq034
 </a>.
   </li>
 <li class="bibitem" id="Xvan1989laws">Van Fraassen, B. (1989). <span class="cmti-10">Laws and symmetry</span>. Oxford University Press, USA.</li>
 <li class="bibitem" id="Xvarela1979principles">Varela, F. (1979). <span class="cmti-10">Principles of biological autonomy</span>. North Holland New York.</li>
 <li class="bibitem" id="XVarela1974187"> Varela, F., Maturana, H., &amp; Uribe, R. (1974). Autopoiesis: The organization of living systems, its characterization and a
     model. <span class="cmti-10">Biosystems</span>, <span class="cmti-10">5</span>, 187 – 196. doi:
-    <a href="http://dx.doi.org/10.1016/0303-2647(74)90031-8">10.1016/0303-2647(74)90031-8
+    <a href="https://doi.org/10.1016/0303-2647(74)90031-8">10.1016/0303-2647(74)90031-8
 </a>.
   </li>
 <li class="bibitem" id="XWaddingtonProlegomena"> Waddington, C. H. (1968). The basic ideas of biology. In C. H. Waddington (Ed.),
@@ -3255,7 +3255,7 @@ spatial scale). Note that, in this example, the degree of organised complexity o
   </li>
 <li class="bibitem" id="Xweber2002"> Weber, A., &amp; Varela, F. (2002). Life after kant: Natural purposes and the autopoietic foundations of biological individuality.
     <span class="cmti-10">Phenomenology and the Cognitive Sciences</span>, <span class="cmti-10">1</span>, 97–125. doi:
-    <a href="http://dx.doi.org/10.1023/A:1020368120174">10.1023/A:1020368120174
+    <a href="https://doi.org/10.1023/A:1020368120174">10.1023/A:1020368120174
 </a>.
   </li>
 <li class="bibitem" id="Xweiss1968dynamics"> Weiss, P. A. (1968). <span class="cmti-10">Dynamics of development: experiments and inferences</span>. New York
@@ -3265,7 +3265,7 @@ spatial scale). Note that, in this example, the degree of organised complexity o
 <li class="bibitem" id="XWie48">Wiener, N. (1948). <span class="cmti-10">Cybernetics</span>. Cambridge: MIT Press.</li>
 <li class="bibitem" id="XWolkenhauer2007461"> Wolkenhauer, O., &amp; Hofmeyr, J.-H. S. (2007). An abstract cell model that describes the self-organization of cell
     function in living systems. <span class="cmti-10">Journal of Theoretical Biology</span>, <span class="cmti-10">246</span>, 461 – 476. doi:
-    <a href="http://dx.doi.org/10.1016/j.jtbi.2007.01.005">10.1016/j.jtbi.2007.01.005
+    <a href="https://doi.org/10.1016/j.jtbi.2007.01.005">10.1016/j.jtbi.2007.01.005
 </a>.
   </li>
 </ol>
