--- a/src/publications/articles/2016-MML-Theoretical-Principles-Organization/index.njk
+++ b/src/publications/articles/2016-MML-Theoretical-Principles-Organization/index.njk
@@ -601,7 +601,7 @@ realizes closure, and is therefore organized.</span></p>
 <li class="bibitem">Bich, L. &amp; Arnellos, A. (2013). Autopoiesis, Autonomy and Organizational Biology: Critical Remarks on “Life After Ashby”. <em>Cybernetics and Human Knowing</em>, 19, 4, 75-103.</li>
 <li class="bibitem">Bickhard, M.H. (2000). Autonomy, function, and representation. Communication and <em>Cognition Artificial Intelligence</em>, 17, 3-4, 111-131.</li>
 <li class="bibitem">Bizzarri, M., Monici, M. van Loon, J.J.W.A. (2015). How Microgravity Affects the Biology of Living Systems. <em>BioMed Research International</em>,
-<a href="http://dx.doi.org/10.1155/2015/863075">http://dx.doi.org/10.1155/2015/863075</a></li>
+doi: <a href="https://doi.org/10.1155/2015/863075">10.1155/2015/863075</a></li>
 <li class="bibitem">Bonduriansky, B. (2012). Rethinking heredity, again. <em>Trans. in ecology</em>, 27, 6, 330-336.</li>
 <li class="bibitem">Cannon, W. B. (1929). Organisation for physiological homeostasis. <em>Physiological Reviews</em>, 9, 3, 399-431.</li>
 <li class="bibitem">Christensen, W. D., &amp; Hooker, C. A. (2000). An interactivist-constructivist approach to intelligence: self-directed anticipative learning. <em>Philosophical Psychology</em>, 13, 5-45.</li>
@@ -632,23 +632,23 @@ realizes closure, and is therefore organized.</span></p>
 <li class="bibitem">Letelier J.C., Cárdenas M., Cornish-Bowden A. (2011). From L’Homme Machine to Metabolic Closure: Steps Towards Understanding Life. <em>Journal of Theoretical Biology</em>, 286, 1, 100-113.</li>
 <li class="bibitem">Longo, G., Miquel, P.A., Sonnenschein, C., Soto, A. (2012a). Is Information a proper observable for biological organization? <em>Progress in Biophysics and Molecular Biology</em>, 109, 3, 108-114.</li>
 <li class="bibitem">G. Longo and M. Montévil. 2011. “From physics to biology by extending criticality and symmetry breakings.” Systems Biology and Cancer, <em>Progress in Biophysics and Molecular Biology</em> 106 (2): 340–347.issn: 0079-6107.
-doi:10.1016/j.pbiomolbio.2011.03.005</li>
+doi: <a href="https://doi.org/10.1016/j.pbiomolbio.2011.03.005">10.1016/j.pbiomolbio.2011.03.005</a></li>
 <li class="bibitem">Longo, G. Montevil, M., Kauffman, S. (2012b). No entailing laws, but enablement in the evolution of the biosphere. <em>Companion Volume of the 14th Genetic and Evolutionary Computation Conference (GECCO)</em>, 1379–1391.</li>
 <li class="bibitem">Longo, G., Montevil, M. (2014). <em>Perspectives on organisms: biological time, symmetries and singularities</em>. Heidelberg: Springer.</li>
 <li class="bibitem">Longo G., Montévil M., Sonnenschein C., Soto A. (2015). In Search of Principles for a Theory of Organisms. <em>Journal of Biosciences</em>, 40, 5, 955-68</li>
 <li class="bibitem">
   Longo, G. &amp; Soto, A.M., Why do we need theories? (2016, this issue). <em>Progress in Biophysics and Molecular Biology</em>, Available online 4 July 2016, ISSN 0079-6107,
-  <a href="http://dx.doi.org/10.1016/j.pbiomolbio.2016.06.005">http://dx.doi.org/10.1016/j.pbiomolbio.2016.06.005</a>
+  doi: <a href="https://doi.org/10.1016/j.pbiomolbio.2016.06.005">10.1016/j.pbiomolbio.2016.06.005</a>
 </li>
 <li class="bibitem">Mameli, M. (2005). The inheritance of features, <em>Biology and Philosophy</em>, 20, 365–399.</li>
 <li class="bibitem">
   Miquel, P.-A., Hwang, S.-Y (2016, this issue). From physical to biological individuation, <em>Progress in Biophysics and Molecular Biology</em>, Available online 16 July 2016, ISSN 0079-6107,
-  <a href="http://dx.doi.org/10.1016/j.pbiomolbio.2016.07.002">http://dx.doi.org/10.1016/j.pbiomolbio.2016.07.002</a>.
+  doi: <a href="https://doi.org/10.1016/j.pbiomolbio.2016.07.002">10.1016/j.pbiomolbio.2016.07.002</a>.
 </li>
 <li class="bibitem">Montévil, M., &amp; Mossio, M. (2015). Biological organisation as closure of constraints. <em>Journal of Theoretical Biology</em>, 372, 179-191.</li>
 <li class="bibitem">
   Montévil, M., Mossio, M., Pocheville, A. &amp; Longo, G. (2016, this issue), Theoretical principles for biology: Variation, <em>Progress in Biophysics and Molecular Biology</em>, Available online 13 August 2016, ISSN 0079-6107,
-  <a href="http://dx.doi.org/10.1016/j.pbiomolbio.2016.08.005">http://dx.doi.org/10.1016/j.pbiomolbio.2016.08.005</a>.
+  doi: <a href="https://doi.org/10.1016/j.pbiomolbio.2016.08.005">10.1016/j.pbiomolbio.2016.08.005</a>.
 </li>
 <li class="bibitem">Moreno, M., Mossio, M. (2015). <em>Biological autonomy. A philosophical and theoretical enquiry</em>. Dordrecht: Springer.</li>
 <li class="bibitem">Moreno, A., &amp; Ruiz Mirazo, K. (1999). Metabolism and the problem of its universalization. <em>BioSystems</em>, 49, 1, 45-61.</li>
@@ -661,12 +661,12 @@ doi:10.1016/j.pbiomolbio.2011.03.005</li>
 <li class="bibitem">Needham, J. (1937) <em>Integrative Levels: A Revaluation of the Idea of Progress</em>, Oxford: Clarendon Press.</li>
 <li class="bibitem">Nicolis, G., &amp; Prigogine, I. (1977). <em>Self-organisation in non-equilibrium systems: from dissipative structures to order through fluctuation</em>. New York: Wiley. Noble, 2006;</li>
 <li class="bibitem">Noble, D. <em>The Music of Life. Biology Beyond the Genome</em>; Oxford University Press: Oxford and New York, 2006.</li>
-<li class="indent">Nunes, N., Moreno, A., &amp; El Hani, C. (2014). Function in ecology: an organizational approach. <em>Biology and Philosophy</em>, 29, 1, 123-141.</li>
+<li class="bibitem">Nunes, N., Moreno, A., &amp; El Hani, C. (2014). Function in ecology: an organizational approach. <em>Biology and Philosophy</em>, 29, 1, 123-141.</li>
 <li class="bibitem">
   Perret, N. &amp; Longo, G. (2016, this issue). Reductionist perspectives and the notion of information, <em>Progress in Biophysics and Molecular Biology</em>, Available online 22 July 2016, ISSN 0079-6107,
-  <a href="http://dx.doi.org/10.1016/j.pbiomolbio.2016.07.003">http://dx.doi.org/10.1016/j.pbiomolbio.2016.07.003</a>.
+  doi: <a href="https://doi.org/10.1016/j.pbiomolbio.2016.07.003">10.1016/j.pbiomolbio.2016.07.003</a>.
 </li>
-<li class="indent">Peterson, E. (2010). <em>Finding Mind, Form, Organism, and Person in a Reductionist Age</em>, PhD Dissertation, 2 vols., Program in History and Philosophy of Science, University of Notre Dame.</li>
+<li class="bibitem">Peterson, E. (2010). <em>Finding Mind, Form, Organism, and Person in a Reductionist Age</em>, PhD Dissertation, 2 vols., Program in History and Philosophy of Science, University of Notre Dame.</li>
 <li class="bibitem">Piaget, J. (1967). <em>Biologie et connaissance</em>. Paris: Éditions de la Pléiade.</li>
 <li class="bibitem">Pontarotti, G. (2015). Extended inheritance from an organizational point of view, <em>Hist.</em> <em>Phil. Life Sci</em>., 37, 4, 430-448.</li>
 <li class="bibitem">Raj, A. &amp; van Oudenaarden, A. (2008). Nature, nurture, or chance: Stochastic gene expression and its consequences. <em>Cell</em>, 135, 2, 216-226.</li>
@@ -682,7 +682,7 @@ doi:10.1016/j.pbiomolbio.2011.03.005</li>
 <li class="bibitem">Shyer, A.E., Tallinen, T., Nerurkar, N.L., Wei, Z., Gil, E.S., Kaplan, D.L., Tabin, C.J., Mahadevan, L. (2013). Villification: How the Gut Gets Its Villi, <em>Science</em>, 342 (6155), 212-218.</li>
 <li class="bibitem">
   Soto, A., Longo, G., Montévil, M., Sonnenschein, C. (2016, this issue). The biological default state of cell proliferation with variation and motility, a fundamental principle for a theory of organisms,
-  <em>Progress in Biophysics and Molecular Biology</em>, Available online 2 July 2016, ISSN 0079-6107, <a href="http://dx.doi.org/10.1016/j.pbiomolbio.2016.06.006">http://dx.doi.org/10.1016/j.pbiomolbio.2016.06.006</a>.
+  <em>Progress in Biophysics and Molecular Biology</em>, Available online 2 July 2016, ISSN 0079-6107, doi: <a href="https://doi.org/10.1016/j.pbiomolbio.2016.06.006">10.1016/j.pbiomolbio.2016.06.006</a>.
 </li>
 <li class="bibitem">Soto, A. Sonnenschein, C. (2005). Emergentism as a default: Cancer as a problem of tissue organization. <em>Journal of Biosciences</em>, 30, 1, 103-18.</li>
 <li class="bibitem">Soto, A.M., Sonnenschein, C., Miquel, P.A. (2008). <em>On physicalism and downward causation in developmental and cancer biology. <em>Acta Biotheoretica</em>, 56, 257–74.</em></li>
