--- a/src/publications/articles/2016-MSS-Modeling-Organogenesis-Principles/index.njk
+++ b/src/publications/articles/2016-MSS-Modeling-Organogenesis-Principles/index.njk
@@ -673,19 +673,19 @@ generation (SHG) images, collagen fibers in white; (B) fiber density maps on mer
 <li class="bibitem">Longo, G., Montévil, M., Sonnenschein, C., Soto, A.M. 2015. In search of principles for a theory of organisms. <span class="cmti-10">J. Biosci. 40</span>, 955-968.</li>
 <li class="bibitem">
   Longo, G. &amp; Soto, A.M. 2016, this issue. Why do we need theories?, <span class="cmti-10">Progress in Biophysics and Molecular Biology</span>, Available online 4 July 2016, ISSN 0079-6107,
-  <a class="url" href="https://dx.doi.org/10.1016/j.pbiomolbio.2016.06.005">https://dx.doi.org/10.1016/j.pbiomolbio.2016.06.005</a>
+  doi: <a class="url" href="https://doi.org/10.1016/j.pbiomolbio.2016.06.005">10.1016/j.pbiomolbio.2016.06.005</a>
 </li>
 <li class="bibitem">
   Miquel, P.-A., Hwang, S.-Y 2016, this issue. From physical to biological individuation, <span class="cmti-10">Progress in Biophysics and Molecular Biology</span>, Available online 16 July 2016, ISSN
-  0079-6107, <a class="url" href="https://dx.doi.org/10.1016/j.pbiomolbio.2016.07.002">https://dx.doi.org/10.1016/j.pbiomolbio.2016.07.002</a>
+  0079-6107, doi: <a class="url" href="https://doi.org/10.1016/j.pbiomolbio.2016.07.002">10.1016/j.pbiomolbio.2016.07.002</a>
 </li>
 <li class="bibitem">
   Montévil, M., Mossio, M., Pocheville, A. &amp; Longo, G. 2016, this issue. Theoretical principles for biology: Variation, <span class="cmti-10">Progress in Biophysics and Molecular Biology</span>, Available online 13 August 2016, ISSN
-  0079-6107, <a class="url" href="https://dx.doi.org/10.1016/j.pbiomolbio.2016.08.005">https://dx.doi.org/10.1016/j.pbiomolbio.2016.08.005</a>
+  0079-6107, doi: <a class="url" href="https://doi.org/10.1016/j.pbiomolbio.2016.08.005">10.1016/j.pbiomolbio.2016.08.005</a>
 </li>
 <li class="bibitem">
   Mossio, M., Montévil, M., Longo, G. 2016, this issue. Theoretical principles for biology: Organization, <span class="cmti-10">Progress in Biophysics and Molecular Biology</span>, Available online 10 August 2016, ISSN 0079-6107,
-  <a class="url" href="https://dx.doi.org/10.1016/j.pbiomolbio.2016.07.005">https://dx.doi.org/10.1016/j.pbiomolbio.2016.07.005</a>
+  doi: <a class="url" href="https://doi.org/10.1016/j.pbiomolbio.2016.07.005">10.1016/j.pbiomolbio.2016.07.005</a>
 </li>
 <li class="bibitem">Neagu, A. 2006. Computational modeling of tissue self-assembly. <span class="cmti-10">Mod. Phys. Lett. 20</span>, 1217.</li>
 <li class="bibitem">
@@ -698,7 +698,7 @@ generation (SHG) images, collagen fibers in white; (B) fiber density maps on mer
 </li>
 <li class="bibitem">
   Perret, N. &amp; Longo, G. 2016, this issue. Reductionist perspectives and the notion of information, <span class="cmti-10">Progress in Biophysics and Molecular Biology</span>, Available online 22 July 2016, ISSN 0079-6107,
-  <a class="url" href="https://dx.doi.org/10.1016/j.pbiomolbio.2016.07.003">https://dx.doi.org/10.1016/j.pbiomolbio.2016.07.003</a>
+  doi: <a class="url" href="https://doi.org/10.1016/j.pbiomolbio.2016.07.003">10.1016/j.pbiomolbio.2016.07.003</a>
 </li>
 <li class="bibitem">
   Rejniak, K.A., Anderson, A.R. 2008. A computational study of the development of epithelial acini: II. Necessary conditions for structure and lumen stability. <span class="cmti-10">Bull. Math.</span>
@@ -712,12 +712,12 @@ generation (SHG) images, collagen fibers in white; (B) fiber density maps on mer
 </li>
 <li class="bibitem">
   Sonnenschein, C., Soto, A.M., Carcinogenesis explained within the context of a theory of organisms, <span class="cmti-10">Progress in Biophysics and Molecular Biology</span>, Available online 3 August 2016, ISSN 0079-6107,
-  <a class="url" href="https://dx.doi.org/10.1016/j.pbiomolbio.2016.07.004">https://dx.doi.org/10.1016/j.pbiomolbio.2016.07.004</a>
+  doi: <a class="url" href="https://doi.org/10.1016/j.pbiomolbio.2016.07.004">10.1016/j.pbiomolbio.2016.07.004</a>
 </li>
 <li class="bibitem">
   Soto, A.M., Longo, G., Montévil, M., Sonnenschein, C. 2016, this issue. The biological default state of cell proliferation with variation and motility, a fundamental principle for a theory of organisms,
   <span class="cmti-10">Progress in Biophysics and Molecular Biology</span>, Available online 2 July 2016, ISSN 0079-6107,
-  <a class="url" href="https://dx.doi.org/10.1016/j.pbiomolbio.2016.06.006">https://dx.doi.org/10.1016/j.pbiomolbio.2016.06.006</a>
+  doi: <a class="url" href="https://doi.org/10.1016/j.pbiomolbio.2016.06.006">10.1016/j.pbiomolbio.2016.06.006</a>
 </li>
 <li class="bibitem">Soto, A.M., Sonnenschein, C. 2005. Emergentism as a default: cancer as a problem of tissue organization. <span class="cmti-10">J. Biosci. 30</span>, 103-118.</li>
 <li class="bibitem">Soto, A.M., Sonnenschein, C. 2011. The tissue organization field theory of cancer: A testable replacement for the somatic mutation theory. <span class="cmti-10">BioEssays 33</span>, 332-340.</li>
