--- a/src/publications/articles/2016-SLM-Theoretical-Principle-Default-State/index.njk
+++ b/src/publications/articles/2016-SLM-Theoretical-Principle-Default-State/index.njk
@@ -360,7 +360,7 @@ proliferative quiescence, lack of variation, and lack of movement require an exp
 <li class="bibitem">Longo, G., Montévil, M., Sonnenschein, C., Soto, A.M. 2015. In search of principles for a theory of organisms. <em>J. Biosci.</em> 40, 955-968.</li>
 <li class="bibitem">
   Longo, G. &amp; Soto, A.M. 2016, this issue, Why do we need theories?, <em>Progress in Biophysics and Molecular Biology</em>, Available online 4 July 2016, ISSN 0079-6107,
-  <a href="http://dx.doi.org/10.1016/j.pbiomolbio.2016.06.005">http://dx.doi.org/10.1016/j.pbiomolbio.2016.06.005</a>
+  doi: <a href="https://doi.org/10.1016/j.pbiomolbio.2016.06.005">10.1016/j.pbiomolbio.2016.06.005</a>
 </li>
 <li class="bibitem">Maienschein, J. 1983. Experimental biology in transition: Harrison’s Embryology 1885-1910. <em>Stud. Hist. Bio.</em> 107-127.</li>
 <li class="bibitem">Marinov, G.K., Williams, B.A., McCue, K., Schroth, G.P., Gertz, J., Myers, R.M., Wold, B.J. 2014. From single-cell to cell-pool transcriptomes: stochasticity in gene expression and RNA splicing. <em>Genome Res. 24</em>, 496-510.</li>
@@ -368,20 +368,20 @@ proliferative quiescence, lack of variation, and lack of movement require an exp
 <li class="bibitem">Minelli, A. 2011. Development, an open-ended segment of life. <em>Biological Theory 6</em>, 4-15.</li>
 <li class="bibitem">
   Miquel, P.-A., Hwang, S.-Y 2016, this issue. From physical to biological individuation, <em>Progress in Biophysics and Molecular Biology</em>, Available online 16 July 2016, ISSN 0079-6107,
-  <a href="http://dx.doi.org/10.1016/j.pbiomolbio.2016.07.002">http://dx.doi.org/10.1016/j.pbiomolbio.2016.07.002</a>
+  doi: <a href="https://doi.org/10.1016/j.pbiomolbio.2016.07.002">10.1016/j.pbiomolbio.2016.07.002</a>
 </li>
 <li class="bibitem">
   Montévil, M., Mossio, M., Pocheville, A. &amp; Longo, G. 2016, this issue. Theoretical principles for biology: Variation, <em>Progress in Biophysics and Molecular Biology</em>, Available online 13 August 2016, ISSN 0079-6107,
-  <a href="http://dx.doi.org/10.1016/j.pbiomolbio.2016.08.005">http://dx.doi.org/10.1016/j.pbiomolbio.2016.08.005</a>
+  doi: <a href="https://doi.org/10.1016/j.pbiomolbio.2016.08.005">10.1016/j.pbiomolbio.2016.08.005</a>
 </li>
 <li class="bibitem">
   Montévil, M., Speroni, L., Sonnenschein, C., Soto, A.M. 2016, this issue. Modeling mammary organogenesis from biological first principles: Cells and their physical constraints, <em>Progress in Biophysics and Molecular Biology</em>,
-  Available online 18 August 2016, ISSN 0079-6107, <a href="http://dx.doi.org/10.1016/j.pbiomolbio.2016.08.004">http://dx.doi.org/10.1016/j.pbiomolbio.2016.08.004</a>
+  Available online 18 August 2016, ISSN 0079-6107, doi: <a href="https://doi.org/10.1016/j.pbiomolbio.2016.08.004">10.1016/j.pbiomolbio.2016.08.004</a>
 </li>
 <li class="bibitem">Moreno, A., Mossio, M. 2015. <em>Biological Autonomy: A Philosophical and Theoretical Enquiry.</em> Springer, New York.</li>
 <li class="bibitem">
   Perret, N. &amp; Longo, G. 2016, this issue. Reductionist perspectives and the notion of information, <em>Progress in Biophysics and Molecular Biology</em>, Available online 22 July 2016, ISSN 0079-6107,
-  <a href="http://dx.doi.org/10.1016/j.pbiomolbio.2016.07.003">http://dx.doi.org/10.1016/j.pbiomolbio.2016.07.003</a>
+  doi: <a href="https://doi.org/10.1016/j.pbiomolbio.2016.07.003">10.1016/j.pbiomolbio.2016.07.003</a>
 </li>
 <li class="bibitem">Raj, A., Oudenaarden, A. 2008. Nature, nurture, or chance: stochastic gene expression and its consequences. <em>Cell 135</em>, 216-226.</li>
 <li class="bibitem">Rehen, S.K., McConnell, M.J., Kaushal, D., Kingsbury, M.A., Yang, A.H., Chun, J. 2001. Chromosomal variation in neurons of the developing and adult mammalian nervous system. <em>Proc. Natl. Acad. Sci U. S. A. 98</em>, 13361-13366.</li>
