--- a/src/publications/articles/2016-SLN-Conclusion-Century-Organism/index.njk
+++ b/src/publications/articles/2016-SLN-Conclusion-Century-Organism/index.njk
@@ -261,43 +261,43 @@ tweets_mentions:
 <li class="bibitem">Longo, G., Montévil, M., Sonnenschein, C., Soto, A.M. 2015b. In search of principles for a theory of organisms. <em>J. Biosci. 40</em>, 955-968.</li>
 <li class="bibitem">
   Longo, G. &amp; Soto, A.M. 2016, this issue, Why do we need theories?, <em>Progress in Biophysics and Molecular Biology</em>, Available online 4 July 2016, ISSN 0079-6107,
-  <a href="http://dx.doi.org/10.1016/j.pbiomolbio.2016.06.005">http://dx.doi.org/10.1016/j.pbiomolbio.2016.06.005</a>
+  doi: <a href="https://doi.org/10.1016/j.pbiomolbio.2016.06.005">10.1016/j.pbiomolbio.2016.06.005</a>
 </li>
 <li class="bibitem">Mayr, E. 1996. <em>This Is Biology.</em> Harvard University Press, Cambridge, MA.</li>
 <li class="bibitem">
   Miquel, P.-A., Hwang, S.-Y 2016, this issue. From physical to biological individuation, <em>Progress in Biophysics and Molecular Biology</em>, Available online 16 July 2016, ISSN 0079-6107,
-  <a href="http://dx.doi.org/10.1016/j.pbiomolbio.2016.07.002">http://dx.doi.org/10.1016/j.pbiomolbio.2016.07.002</a>
+  doi: <a href="https://doi.org/10.1016/j.pbiomolbio.2016.07.002">10.1016/j.pbiomolbio.2016.07.002</a>
 </li>
 <li class="bibitem">Montévil, M., Mossio, M. 2015. Biological organisation as closure of constraints. <em>J. Theor. Biol. 372</em>, 179-191.</li>
 <li class="bibitem">
   Montévil, M., Mossio, M., Pocheville, A. &amp; Longo, G. 2016, this issue. Theoretical principles for biology: Variation, <em>Progress in Biophysics and Molecular Biology</em>, Available online 13 August 2016, ISSN 0079-6107,
-  <a href="http://dx.doi.org/10.1016/j.pbiomolbio.2016.08.005">http://dx.doi.org/10.1016/j.pbiomolbio.2016.08.005</a>
+  doi: <a href="https://doi.org/10.1016/j.pbiomolbio.2016.08.005">10.1016/j.pbiomolbio.2016.08.005</a>
 </li>
 <li class="bibitem">
   Montévil, M., Speroni, L., Sonnenschein, C., Soto, A.M. 2016, this issue. Modeling mammary organogenesis from biological first principles: Cells and their physical constraints, <em>Progress in Biophysics and Molecular Biology</em>,
-  Available online 18 August 2016, ISSN 0079-6107, <a href="http://dx.doi.org/10.1016/j.pbiomolbio.2016.08.004">http://dx.doi.org/10.1016/j.pbiomolbio.2016.08.004</a>
+  Available online 18 August 2016, ISSN 0079-6107, doi: <a href="https://doi.org/10.1016/j.pbiomolbio.2016.08.004">10.1016/j.pbiomolbio.2016.08.004</a>
 </li>
 <li class="bibitem">Moss, L. 2003. <em>What Genes Can’t Do.</em> MIT Press, Cambridge, MA.</li>
 <li class="bibitem">
   Mossio, M., Montévil, M., Longo, G. 2016, this issue. Theoretical principles for biology: Organization, <em>Progress in Biophysics and Molecular Biology</em>, Available online 10 August 2016, ISSN 0079-6107,
-  <a href="http://dx.doi.org/10.1016/j.pbiomolbio.2016.07.005">http://dx.doi.org/10.1016/j.pbiomolbio.2016.07.005</a>
+  doi: <a href="https://doi.org/10.1016/j.pbiomolbio.2016.07.005">10.1016/j.pbiomolbio.2016.07.005</a>
 </li>
 <li class="bibitem">Müller-Wille, S., 2010. Cell theory, specificity, and reproduction, 1837–1870, <em>Stud Hist Philos Biol Biomed Sci. 41</em>: 225–231</li>
 <li class="bibitem">Noble, D. 2006. <em>The Music of Life: Biology beyond the Genome.</em> Oxford University Press, Oxford.</li>
 <li class="bibitem">
   Perret, N. &amp; Longo, G. 2016, this issue. Reductionist perspectives and the notion of information, <em>Progress in Biophysics and Molecular Biology</em>, Available online 22 July 2016, ISSN 0079-6107,
-  <a href="http://dx.doi.org/10.1016/j.pbiomolbio.2016.07.003">http://dx.doi.org/10.1016/j.pbiomolbio.2016.07.003</a>
+  doi: <a href="https://doi.org/10.1016/j.pbiomolbio.2016.07.003">10.1016/j.pbiomolbio.2016.07.003</a>
 </li>
 <li class="bibitem">Rosen, R. 1991. <em>Life Itself: A Comprehensive Inquiry into the Nature, Origin, and Fabrication of Life.</em> Columbia University Press, New York.</li>
 <li class="bibitem">Slijper, E.J. 1942a. Biologic-anatomical investigations on the bipedal gait and upright posture in mammals, with special reference to a little goat, born without forelegs I. <em>Proc. Konink. Ned. Akad. Wet. 45</em>, 288-295.</li>
 <li class="bibitem">—— 1942b. Biologic-anatomical investigations on the bipedal gait and upright posture in mammals, with special reference to a little goat, born without forelegs II. <em>Proc. Konink. Ned. Akad. Wet. 45</em>, 407-415.</li>
 <li class="bibitem">
   Sonnenschein, C., Soto, A.M., Carcinogenesis explained within the context of a theory of organisms, <em>Progress in Biophysics and Molecular Biology</em>, Available online 3 August 2016, ISSN 0079-6107,
-  <a href="http://dx.doi.org/10.1016/j.pbiomolbio.2016.07.004">http://dx.doi.org/10.1016/j.pbiomolbio.2016.07.004</a>
+  doi: <a href="https://doi.org/10.1016/j.pbiomolbio.2016.07.004">10.1016/j.pbiomolbio.2016.07.004</a>
 </li>
 <li class="bibitem">
   Soto, A.M., Longo, G., Montévil, M., Sonnenschein, C. 2016, this issue. The biological default state of cell proliferation with variation and motility, a fundamental principle for a theory of organisms,
-  <em>Progress in Biophysics and Molecular Biology</em>, Available online 2 July 2016, ISSN 0079-6107, <a href="http://dx.doi.org/10.1016/j.pbiomolbio.2016.06.006">http://dx.doi.org/10.1016/j.pbiomolbio.2016.06.006</a>
+  <em>Progress in Biophysics and Molecular Biology</em>, Available online 2 July 2016, ISSN 0079-6107, doi: <a href="https://doi.org/10.1016/j.pbiomolbio.2016.06.006">10.1016/j.pbiomolbio.2016.06.006</a>
 </li>
 <li class="bibitem">Soto, A.M., Sonnenschein, C. 1991. Regulation of cell proliferation: the negative control perspective. <em>Ann. NY Acad. Sci. 628</em>, 412-418.</li>
 <li class="bibitem">Soto, A.M., Sonnenschein, C., Miquel, P.-A. 2008. On physicalism and Downward Causation in Developmental and Cancer Biology. <em>Acta Biotheoretica 56</em>, 257-274.</li>
