--- a/src/publications/articles/2016-Theory-Morphogenesis/index.njk
+++ b/src/publications/articles/2016-Theory-Morphogenesis/index.njk
@@ -13,7 +13,7 @@ tags:
 <p class="titleHead" id="theoretical-approach-of-ductal-morphogenesis">Theoretical approach of ductal morphogenesis</p>
 <div class="authors" >
    Maël Montévil
-  <span class="superLegacy"><span class="Footnote_20_anchor" title="Footnote:  E mail: mael.montevil@gmail.com. Url: http://montevil.theobio.org Laboratoire &quot;Matière et Systèmes Complexes&quot; (MSC), UMR 7057 CNRS, Université Paris 7 Diderot, 75205 Paris Cedex 13, France and Institut d’Histoire et de Philosophie des Sciences et des Techniques (IHPST) - UMR 8590 Paris, France. ">*</span></span>
+  <span class="superLegacy"><span class="Footnote_20_anchor" title="Footnote:  E mail: mael.montevil@gmail.com. Url: https://montevil.org Laboratoire &quot;Matière et Systèmes Complexes&quot; (MSC), UMR 7057 CNRS, Université Paris 7 Diderot, 75205 Paris Cedex 13, France and Institut d’Histoire et de Philosophie des Sciences et des Techniques (IHPST) - UMR 8590 Paris, France. ">*</span></span>
 
 <div >
    Carlos Sonnenschein
@@ -187,69 +187,69 @@ the interplay between these two components [see figure
 </p>
 <h2 class="sectionHead thebibilography" id="references">References</h2>
 <ol class="thebibliography">
-<li class="bibitem" id="BIB_longomont">[1] Longo G and Montévil M. <span class="cmti-10">Perspectives on Organisms: Biological time, symmetries and singularities</span>. Lecture Notes in Morphogenesis. Springer, Dordrecht, 2014.</a>
+<li class="bibitem" id="BIB_longomont">[1] Longo G and Montévil M. <span class="cmti-10">Perspectives on Organisms: Biological time, symmetries and singularities</span>. Lecture Notes in Morphogenesis. Springer, Dordrecht, 2014.
 </li>
-<li class="bibitem" id="BIB_lomososo2015"> [2] Longo G, Montévil M, Sonnenschein C, and Soto AM. In search of principles for a theory of organisms. <span class="cmti-10">Journal of Biosciences</span>, pages 1–14, 2015.</a>
+<li class="bibitem" id="BIB_lomososo2015"> [2] Longo G, Montévil M, Sonnenschein C, and Soto AM. In search of principles for a theory of organisms. <span class="cmti-10">Journal of Biosciences</span>, pages 1–14, 2015.
 </li>
-<li class="bibitem" id="BIB_longo13"> [3] Longo G and Montévil M. Extended criticality, phase spaces and enablement in biology. <span class="cmti-10">Chaos, Solitons &amp; Fractals</span>, page 64-79, 2013.</a>
+<li class="bibitem" id="BIB_longo13"> [3] Longo G and Montévil M. Extended criticality, phase spaces and enablement in biology. <span class="cmti-10">Chaos, Solitons &amp; Fractals</span>, page 64-79, 2013.
 </li>
 <li class="bibitem" id="BIB_longo2011c"> [4]
  Longo G and Montévil M. From physics to biology by extending criticality and symmetry breakings. <span class="cmti-10">Progress in Biophysics and Molecular Biology</span>, 106(2):340 – 347, 2011. Invited paper, special issue:
-Systems Biology and Cancer.</a>
+Systems Biology and Cancer.
 </li>
 <li class="bibitem" >[5] Dinicola S, Fabrizi G, Masiello MG, Proietti S,  Palombo A, Minini M,  Harrath AH, Alwasel SH, Ricci G, Catizone A, Cucina A, Bizzarri M, Inositol induces mesenchymal-epithelial reversion
 in breast cancer cells through cytoskeleton rearrangement,
-<span class="cmti-10">Experimental Cell Research</span>, Volume 345, Issue 1, 1 July 2016, Pages 37-50, ISSN 0014-4827, http://dx.doi.org/10.1016/j.yexcr.2016.05.007.</a></li>
+<span class="cmti-10">Experimental Cell Research</span>, Volume 345, Issue 1, 1 July 2016, Pages 37-50, ISSN 0014-4827, doi: <a href="https://doi.org/10.1016/j.yexcr.2016.05.007">10.1016/j.yexcr.2016.05.007.</a></li>
 <li class="bibitem" id="BIB_Sakakura421"> [6]
  Sakakura T, Kusano I, Kusakabe M, Inaguma Y, and Nishizuka Y. Biology of mammary fat pad in fetal mouse: capacity to support development of various fetal epithelia in vivo. <span class="cmti-10">Development</span>,
-100(3):421–430, 1987.</a>
+100(3):421–430, 1987.
 </li>
-<li class="bibitem" id="BIB_Engler2006677"> [7] Engler AJ, Sen S, Lee Sweeney H, and  Discher DE. Matrix elasticity directs stem cell lineage specification. <span class="cmti-10">Cell</span>, 126(4):677 – 689, 2006.</a>
+<li class="bibitem" id="BIB_Engler2006677"> [7] Engler AJ, Sen S, Lee Sweeney H, and  Discher DE. Matrix elasticity directs stem cell lineage specification. <span class="cmti-10">Cell</span>, 126(4):677 – 689, 2006.
 </li>
-<li class="bibitem" id="BIB_Maffini15032004"> [8] Maffini MV, Soto AM, Calabro JM, Ucci AA, and Sonnenschein C. The stroma as a crucial target in rat mammary gland carcinogenesis. <span class="cmti-10">Journal of Cell Science</span>, 117(8):1495–1502, 2004.</a>
+<li class="bibitem" id="BIB_Maffini15032004"> [8] Maffini MV, Soto AM, Calabro JM, Ucci AA, and Sonnenschein C. The stroma as a crucial target in rat mammary gland carcinogenesis. <span class="cmti-10">Journal of Cell Science</span>, 117(8):1495–1502, 2004.
 </li>
 <li class="bibitem" id="BIB_duda2010malignant"> [9]
  Duda DG, Duyverman A, Kohno M, Snuderl M, Steller E, Fukumura D, and Jain RK. Malignant cells facilitate lung metastasis by bringing their own soil. <span class="cmti-10">Proceedings of the National Academy of Sciences</span>,
-107(50):21677–21682, 2010.</a>
+107(50):21677–21682, 2010.
 </li>
 <li class="bibitem" id="BIB_Lucia_2014"> [10]
  Barnes C, Speroni L, Quinn K, Montévil M, Saetzler K, Bode-Animashaun G, McKerr G, Georgakoudi I, Downes S, Sonnenschein C, Howard V, and Soto AM. From single cells to tissues: Interactions between the matrix and human
-breast cells in real time. <span class="cmti-10">PLoS ONE</span>, 9(4):e93325, 04 2014.</a>
+breast cells in real time. <span class="cmti-10">PLoS ONE</span>, 9(4):e93325, 04 2014.
 </li>
 <li class="bibitem" id="BIB_krause2008novel"> [11]
  Krause S, Maffini MV, Soto AM, and Sonnenschein C. A novel 3d in vitro culture model to study stromal-epithelial interactions in the mammary gland. <span class="cmti-10">Tissue Engineering Part C: Methods</span>, 14(3):261–271,
-2008.</a>
+2008.
 </li>
 <li class="bibitem" id="BIB_Rejniak2dacini"> [12]
  Rejniak KA and  Anderson ARA. A computational study of the development of epithelial acini: Ii.necessary conditions for structure and lumen stability. <span class="cmti-10">Bulletin of Mathematical Biology</span>,
-70(5):1450–1479, 2008.</a>
+70(5):1450–1479, 2008.
 </li>
-<li class="bibitem" id="BIB_dhimolea2010role"> [13] Dhimolea E, Maffini MV, Soto AM, and Sonnenschein C. The role of collagen reorganization on mammary epithelial morphogenesis in a 3d culture model. <span class="cmti-10">Biomaterials</span>, 31:3622–3630, 2010.</a>
+<li class="bibitem" id="BIB_dhimolea2010role"> [13] Dhimolea E, Maffini MV, Soto AM, and Sonnenschein C. The role of collagen reorganization on mammary epithelial morphogenesis in a 3d culture model. <span class="cmti-10">Biomaterials</span>, 31:3622–3630, 2010.
 </li>
 <li class="bibitem" id="BIB_Wang20142592"> [14]
  Wang H, Abhilash AS, Chen CS, Wells RG, and Shenoy VB. Long-range force transmission in fibrous matrices enabled by tension-driven alignment of fibers. <span class="cmti-10">Biophysical Journal</span>, 107(11):2592 – 2603,
-2014.</a>
+2014.
 </li>
 <li class="bibitem" id="BIB_Grantreactiondiffusion"> [15]
  Grant MR, Hunt CA, Xia L, Fata JE, and Bissell MJ. Modeling mammary gland morphogenesis as a reaction-diffusion process. In
-<span class="cmti-10">Engineering in Medicine and Biology Society, 2004. IEMBS ’04. 26th Annual International Conference of the IEEE</span>, volume 1, pages 679–682, Sept 2004.</a>
+<span class="cmti-10">Engineering in Medicine and Biology Society, 2004. IEMBS ’04. 26th Annual International Conference of the IEEE</span>, volume 1, pages 679–682, Sept 2004.
 </li>
-<li class="bibitem" id="BIB_Harjantoremodeling"> [ 16 ] Harjanto D and Zaman MH. Modeling extracellular matrix reorganization in 3d environments. <span class="cmti-10">PLoS ONE</span>, 8(1):1–11, 01 2013.</a>
+<li class="bibitem" id="BIB_Harjantoremodeling"> [16] Harjanto D and Zaman MH. Modeling extracellular matrix reorganization in 3d environments. <span class="cmti-10">PLoS ONE</span>, 8(1):1–11, 01 2013.
 </li>
 <li class="bibitem" id="BIB_chapterdefault"> [17]
  Soto AM, Sonnenschein C, Montévil M, and Longo G. The biological default state of  cell proliferation with variation and motility, a fundamental principle for a theory of organisms.
-<span class="cmti-10">Prog Biophys Mol Biol.</span> doi: 10.1016/j.pbiomolbio.2016.06.006, 2016.</a>
+<span class="cmti-10">Prog Biophys Mol Biol.</span> doi: <a href="https://doi.org/10.1016/j.pbiomolbio.2016.06.006">10.1016/j.pbiomolbio.2016.06.006</a>, 2016.
 </li>
-<li class="bibitem" id="BIB_NYASNYAS412"> [18] Soto AM and Sonnenschein C. Regulation of cell proliferation: The negative control perspectivea. <span class="cmti-10">Annals of the New York Academy of Sciences</span>, 628(1):412–418, 1991.</a>
+<li class="bibitem" id="BIB_NYASNYAS412"> [18] Soto AM and Sonnenschein C. Regulation of cell proliferation: The negative control perspectivea. <span class="cmti-10">Annals of the New York Academy of Sciences</span>, 628(1):412–418, 1991.
 </li>
-<li class="bibitem" id="BIB_Society"> [19] Sonnenschein C and Soto AM. <span class="cmti-10">The society of cells: cancer and control of cell proliferation</span>. Springer Verlag, New York, 1999.</a>
+<li class="bibitem" id="BIB_Society"> [19] Sonnenschein C and Soto AM. <span class="cmti-10">The society of cells: cancer and control of cell proliferation</span>. Springer Verlag, New York, 1999.
 </li>
 <li class="bibitem" id="BIB_Sonnenschein1996147"> [20]
  Sonnenschein C, Soto AM, and Michaelson CL. Human serum albumin shares the properties of estrocolyone-i, the inhibitor of the proliferation of estrogen-target cells.
-<span class="cmti-10">The Journal of Steroid Biochemistry and Molecular Biology</span>, 59(2):147 – 154, 1996.</a>
+<span class="cmti-10">The Journal of Steroid Biochemistry and Molecular Biology</span>, 59(2):147 – 154, 1996.
 </li>
 <li class="bibitem" id="BIB_chapterconstraints"> [21]
  Montévil M, Speroni L, Sonnenschein C, and Soto AM. Modeling mammary organogenesis from biological first principles: cells and their physical constraints.
-<span class="cmti-10">Prog Biophys Mol Biol. Doi: 10.1016/j.pbiomolbio.2016.08.004</span>, 2016.</a>
+<span class="cmti-10">Prog Biophys Mol Biol.</span> doi: <a href="https://doi.org/10.1016/j.pbiomolbio.2016.08.004">10.1016/j.pbiomolbio.2016.08.004</a>, 2016.
 </li>
 </ol>
