--- a/src/publications/articles/2017-MP-Hitchhikers-Guide-Cancer/index.njk
+++ b/src/publications/articles/2017-MP-Hitchhikers-Guide-Cancer/index.njk
@@ -531,7 +531,7 @@ as that of inducing gene expression, which cannot be predicted from our knowledg
 <li class="bibitem">Bizzarri, M., Cucina, A., Conti, F., and D'Anselmi, F. 2008. “Beyond the oncogene paradigm: understanding complexity in cancerogenesis,”Acta Biotheoretica, vol. 56, no. 3, pp. 173–196.</li>
 <li class="bibitem">Bizzarri, M. and A. Cucina. 2016. “SMT and TOFT: Why and How They are Opposite and Incompatible Paradigms.” Acta Biotheoretica pp. 1–19.</li>
 <li class="bibitem">Boveri, T. 1914. Zur Frage der Entstehung maligner Tumoren. G. Fischer.</li>
-<li class="bibitem">Brigandt, I. and A. Love. 2015. Reductionism in Biology. In The Stanford Encyclopedia of Philosophy, ed. Edward N. Zalta. Fall 2015 ed.<br />URL<span class="textbf">:</span> <span class="cmti-10">http://plato.stanford.edu/archives/fall2015/entries/ reduction-biology/</span></li>
+<li class="bibitem">Brigandt, I. and A. Love. 2015. Reductionism in Biology. In The Stanford Encyclopedia of Philosophy, ed. Edward N. Zalta. Fall 2015 ed.<br />URL<span class="textbf">:</span> <a class="cmti-10" href="http://plato.stanford.edu/archives/fall2015/entries/ reduction-biology/">http://plato.stanford.edu/archives/fall2015/entries/ reduction-biology/</a></li>
 <li class="bibitem">Brinster, R.L. 1974. The effect of cells transferred into the mouse blastocyst on subsequent development. J Exp Med 140:1049–1056</li>
 <li class="bibitem">Capp, J.P. 2012. Nouveau regard sur le cancer. Belin, Paris.</li>
 <li class="bibitem">Chibbaro, S., L. Rondoni and A. Vulpiani. 2014. Reductionism, emergence and levels of reality. Springer.</li>
@@ -546,7 +546,7 @@ as that of inducing gene expression, which cannot be predicted from our knowledg
 <li class="bibitem">Kenny, P.A. and Bissell. 2003. M. J, “Tumor reversion: correction of malignant behavior by microenvironmental cues,” International Journal of Cancer, vol. 107, no. 5, pp. 688–695.</li>
 <li class="bibitem">Kim, J. 1998. Mind in a Physical World: An Essay on the Mind-body Problem and Mental Causation. Cambridge MA: MIT Press.</li>
 <li class="bibitem">Kuhn, T. S. 1962. The structure of scientific revolutions. 2nd ed. University of Chicago press.</li>
-<li class="bibitem">Lichtenberg, F.R. 2010 “Has medical innovation reduced cancer mortality?” www.nber.org/papers/w15880;</li>
+<li class="bibitem">Lichtenberg, F.R. 2010 “Has medical innovation reduced cancer mortality?” <a href="https://www.nber.org/papers/w15880">www.nber.org/papers/w15880</a>;</li>
 <li class="bibitem">Longo, G., M. Montévil and A. Pocheville. 2012. “From bottom-up approaches to levels of organization and extended critical transitions.” Frontiers in Physiology 3:1–11.</li>
 <li class="bibitem">Longo, G., P. A. Miquel, C. Sonnenschein and A. M. Soto. 2012. “Is information a proper observable for biological organization?” Progress in Biophysics and Molecular Biology 109(3):108–114.</li>
 <li class="bibitem">Longo, G. and A. M. Soto. 2016. “Why do we need theories?” Progress in Biophysics and Molecular Biology 122(1):4–10.</li>
@@ -596,7 +596,7 @@ as that of inducing gene expression, which cannot be predicted from our knowledg
   Vallat, L., Kemper, C. A., Jung, N., Maumy-Bertrand, M., Bertrand, F., Meyer, N., Pocheville, A. et al. 2013. “Reverse-engineering the genetic circuitry of a cancer cell with predicted intervention in chronic lymphocytic leukemia”.
   Proceedings of the National Academy of Sciences, 110(2), 459-464.
 </li>
-<li class="bibitem">van Riel, R. and R. Van Gulick. 2016. Scientific Reduction. In The Stanford Encyclopedia of Philosophy, ed. Edward N. Zalta. Spring 2016 ed.<br />URL<span class="textbf">:</span> <span class="cmti-10">http://plato.stanford.edu/archives/spr2016/entries/ scientific-reduction/</span></li>
+<li class="bibitem">van Riel, R. and R. Van Gulick. 2016. Scientific Reduction. In The Stanford Encyclopedia of Philosophy, ed. Edward N. Zalta. Spring 2016 ed.<br />URL<span class="textbf">:</span> <a class="cmti-10" href="https://plato.stanford.edu/archives/spr2016/entries/scientific-reduction/">https://plato.stanford.edu/archives/spr2016/entries/scientific-reduction/</a></li>
 <li class="bibitem">Weinberg, R. A. 2014. “Coming full circle—from endless complexity to simplicity and back again.” Cell 157(1):267–271.</li>
 <li class="bibitem">Wolfe, C. T. 2016. “The ‘physiology of the understanding’ and the ‘mechanics of the soul’: reflections on some phantom philosophical projects.” Quaestio.</li>
 </ol>
