--- a/src/publications/articles/2021-Montevil-Entropies-Anthropocene/index.njk
+++ b/src/publications/articles/2021-Montevil-Entropies-Anthropocene/index.njk
@@ -2351,7 +2351,7 @@ class="cmti-10">Synthese</span>,  <span
 class="cmti-10">194</span>,  12:pp.  4757–4779.   ISSN  1573-0964.
   <a 
 href="https://doi.org/10.1007/s11229-016-1165-2" class="url" ><span 
-class="ectt-1095">https://doi.org/10.1007/s11229-016-1165-2</span></a>.  doi: <a 
+class="ectt-1095">10.1007/s11229-016-1165-2</span></a>.  doi: <a 
 href="https://doi.org/10.1007/s11229-016-1165-2" ><span 
 class="ectt-1095">10.1007/s11229-016-1165</span>
   <span 
@@ -2398,7 +2398,7 @@ class="cmti-10">45</span>,  21:pp.  9175–9179.   PMID:
   21894925, <a 
 href="https://doi.org/10.1021/es201811s" >PDF</a>. <a 
 href="https://doi.org/10.1021/es201811s" class="url" ><span 
-class="ectt-1095">https://doi.org/10.1021/es201811s</span></a>. doi: <a 
+class="ectt-1095">10.1021/es201811s</span></a>. doi: <a 
 href="https://doi.org/10.1021/es201811s" ><span 
 class="ectt-1095">10.1021/es201811s</span></a>.
   </li>
@@ -2445,7 +2445,7 @@ class="cmti-10">PLOS   ONE</span>,   <span
 class="cmti-10">9</span>,   12:pp.   1–22.
   <a 
 href="https://doi.org/10.1371/journal.pone.0115574" class="url" ><span 
-class="ectt-1095">https://doi.org/10.1371/journal.pone.0115574</span></a>.  doi: <a 
+class="ectt-1095">10.1371/journal.pone.0115574</span></a>.  doi: <a 
 href="https://doi.org/10.1371/journal.pone.0115574" ><span 
 class="ectt-1095">10.1371/journal.pone.</span>
   <span 
@@ -2460,7 +2460,7 @@ class="ectt-1095">0115574</span></a>.
 class="cmti-10">PLOS  ONE</span>,  <span 
 class="cmti-10">2</span>,  5:pp.  1–13.   <a 
 href="https://doi.org/10.1371/journal.pone.0000457" class="url" ><span 
-class="ectt-1095">https://doi.org/10.1371/journal.pone.0000457</span></a>.
+class="ectt-1095">10.1371/journal.pone.0000457</span></a>.
   doi: <a 
 href="https://doi.org/10.1371/journal.pone.0000457" ><span 
 class="ectt-1095">10.1371/journal.pone.0000457</span></a>.
@@ -2560,7 +2560,7 @@ class="cmti-10">6</span>, 1:pp. 159–165.  ISSN 2201-1919.  <a
 href="https://read.dukeupress.edu/environmental-humanities/article-pdf/6/1/159/251848/159Haraway.pdf" >PDF</a>.
   <a 
 href="https://doi.org/10.1215/22011919-3615934" class="url" ><span 
-class="ectt-1095">https://doi.org/10.1215/22011919-3615934</span></a>. doi: <a 
+class="ectt-1095">10.1215/22011919-3615934</span></a>. doi: <a 
 href="https://doi.org/10.1215/22011919-3615934" ><span 
 class="ectt-1095">10.1215/22011919-3615934</span></a>.
   </li>
@@ -2641,7 +2641,7 @@ class="cmti-10">Foundations  of  Science</span>,  <span
 class="cmti-10">23</span>,  3:pp.  443–474.    ISSN  1572-8471.
   <a 
 href="https://doi.org/10.1007/s10699-017-9535-x" class="url" ><span 
-class="ectt-1095">https://doi.org/10.1007/s10699-017-9535-x</span></a>.  doi: <a 
+class="ectt-1095">10.1007/s10699-017-9535-x</span></a>.  doi: <a 
 href="https://doi.org/10.1007/s10699-017-9535-x" ><span 
 class="ectt-1095">10.1007/s10699-017-9535</span>
   <span 
@@ -2963,7 +2963,7 @@ class="cmti-10">Environmental Science &#x0026; Technology</span>,
 class="cmti-10">27</span>, 9:pp. 1892–1904. <a 
 href="https://doi.org/10.1021/es00046a019" >PDF</a>. <a 
 href="https://doi.org/10.1021/es00046a019" class="url" ><span 
-class="ectt-1095">https://doi.org/10.1021/es00046a019</span></a>. doi: <a 
+class="ectt-1095">10.1021/es00046a019</span></a>. doi: <a 
 href="https://doi.org/10.1021/es00046a019" ><span 
 class="ectt-1095">10.1021</span>
   <span 
