--- a/src/publications/articles/2021-Montevil-vaccines-germs-knowledge/index.njk
+++ b/src/publications/articles/2021-Montevil-vaccines-germs-knowledge/index.njk
@@ -27,7 +27,7 @@ syndication:
 </p>
   <p class="noindent"><span class="paragraphHead">keywords:</span>  epistemology, immunology, politics
 <hr>
-<a href="https://www.philosophy-world-democracy.org/vaccines-germs-and-knowledge"> Free access on the journal website. </a>
+<h3 class="center"> <a class="buttonlink" href="https://www.philosophy-world-democracy.org/vaccines-germs-and-knowledge"> Free access on the journal website. </a></h3>
 {#
 <!-- l. 45 --><p class='indent'>   Vaccines for COVID-19 have led to questions, debates (<a href='#x1-40011'>1<!-- tex4ht:ref: ref1  --></a>), and polemics on both
 their safety and the political and geopolitical dimension of their use. We propose to
@@ -489,6 +489,10 @@ populations, and political leaders alike is characteristic of the response to CO
 to do better, theoretical accuracy and a new alliance of scientific and popular
 knowledge is required.
 </p>
+    #}
+
+
+
    <h3 class='sectionHead' id='x1-40004'><span class='titlemark'>4   </span> References</h3>
 <ol class='thebibliography thebibliographynb'>
      <li class="bibitem" class='enumerate' id='x1-40011'> Castrillón, Fernando and Marchevsky, Thomas (Editors). <span class='ecti-1000'>Coronavirus,
@@ -506,35 +510,35 @@ knowledge is required.
      </li>
      <li class="bibitem" class='enumerate' id='x1-40074'> Matzinger, P. The evolution of the danger theory. Interview by Lauren
      Constable, Commissioning Editor.<span class='ecti-1000'>Expert review of clinical immunology </span>8.
-     4 (2012): 311–317. <a href='https://doi.org/10.1586/eci.12.21' class='url'><span class='ectt-1000'>https://doi.org/10.1586/eci.12.21</span></a>
+     4 (2012): 311–317. <a href='https://doi.org/10.1586/eci.12.21' class='url'><span class='ectt-1000'>10.1586/eci.12.21</span></a>
      </li>
      <li class="bibitem" class='enumerate' id='x1-40095'> Gilbert, SF, Tauber, AI. Rethinking individuality: the dialectics of the
      holobiont.         <span class='ecti-1000'>Biol        Philos        </span>31.          (2016):          839–853.
-     <a href='https://doi.org/10.1007/s10539-016-9541-3' class='url'><span class='ectt-1000'>https://doi.org/10.1007/s10539-016-9541-3</span></a>
+     <a href='https://doi.org/10.1007/s10539-016-9541-3' class='url'><span class='ectt-1000'>10.1007/s10539-016-9541-3</span></a>
      </li>
      <li class="bibitem" class='enumerate' id='x1-40116'> Rook, GAW. Hygiene Hypothesis and Autoimmune Diseases.<span class='ecti-1000'>Clinic Rev
      </span><span class='ecti-1000'>Allerg             Immunol             </span>42.               (2012):               5–15.
-     <a href='https://doi.org/10.1007/s12016-011-8285-8' class='url'><span class='ectt-1000'>https://doi.org/10.1007/s12016-011-8285-8</span></a>
+     <a href='https://doi.org/10.1007/s12016-011-8285-8' class='url'><span class='ectt-1000'>10.1007/s12016-011-8285-8</span></a>
      </li>
      <li class="bibitem" class='enumerate' id='x1-40137'>       Pradeu,           T,           and           Vivier,           E.
      “The discontinuity theory of immunity.” <span class='ecti-1000'>Science immunology </span>1. 1 (2016):
-     AAG0479. doi: <a href='https://doi.org/10.1126/sciimmunol.aag0479' class='url'><span class='ectt-1000'>https://doi.org/10.1126/sciimmunol.aag0479</span></a>
+     AAG0479. doi: <a href='https://doi.org/10.1126/sciimmunol.aag0479' class='url'><span class='ectt-1000'>10.1126/sciimmunol.aag0479</span></a>
                                                                   
 
                                                                   
      </li>
      <li class="bibitem" class='enumerate' id='x1-40158'> Thomas-Vaslin  V  A  complex  immunological  idiotypic  network  for
      maintenance  of  tolerance.  <span class='ecti-1000'>Front.  Immunol.  </span><span class='ecbx-1000'>5.  </span>369   (2014).   doi:
-     <a href='https://doi.org/10.3389/fimmu.2014.00369' class='url'><span class='ectt-1000'>https://doi.org/10.3389/fimmu.2014.00369</span></a>
+     <a href='https://doi.org/10.3389/fimmu.2014.00369' class='url'><span class='ectt-1000'>10.3389/fimmu.2014.00369</span></a>
      </li>
      <li class="bibitem" class='enumerate' id='x1-40179'> Montévil, Maël, and Matteo Mossio. “The Identity of Organisms in
      Scientific               Practice:               Integrating               Historical
      and Relational Conceptions.” <span class='ecti-1000'>Frontiers in physiology </span>11. 611 (2020) doi:
-     <a href='https://doi.org/10.3389/fphys.2020.00611' class='url'><span class='ectt-1000'>https://doi.org/10.3389/fphys.2020.00611</span></a>
+     <a href='https://doi.org/10.3389/fphys.2020.00611' class='url'><span class='ectt-1000'>10.3389/fphys.2020.00611</span></a>
      </li>
      <li class="bibitem" class='enumerate' id='x1-401910'> Sayaka, M and Yusa, Y. Extreme autotomy and whole-body regeneration
      in photosynthetic sea slugs.<span class='ecti-1000'>Current Biology</span>, published online March 8,
-     2021; doi: <a href='https://doi.org/10.1016/j.cub.2021.01.014' class='url'><span class='ectt-1000'>https://doi.org/10.1016/j.cub.2021.01.014</span></a>
+     2021; doi: <a href='https://doi.org/10.1016/j.cub.2021.01.014' class='url'><span class='ectt-1000'>10.1016/j.cub.2021.01.014</span></a>
      </li>
      <li class="bibitem" class='enumerate' id='x1-402111'> Stiegler, B. <span class='ecti-1000'>The Age of Disruption</span>. Polity Press, 2019.
      </li>
@@ -552,7 +556,7 @@ knowledge is required.
      </li>
      <li class="bibitem" class='enumerate' id='x1-403116'>         Montévil,              Maël.              “Measurement
      in Biology Is Methodized by Theory.” <span class='ecti-1000'>Biology &amp; Philosophy </span>34. 3 (2019):
-     35.<a href='https://doi.org/10.1007/s10539-019-9687-x' class='url'><span class='ectt-1000'>https://doi.org/10.1007/s10539-019-9687-x</span></a>
+     35.<a href='https://doi.org/10.1007/s10539-019-9687-x' class='url'><span class='ectt-1000'>10.1007/s10539-019-9687-x</span></a>
      </li>
      <li class="bibitem" class='enumerate' id='x1-403317'> Morand, S.. Emerging diseases, livestock expansion and biodiversity loss
      are positively related at global scale. <span class='ecti-1000'>Biological Conservation </span>248<span class='ecti-1000'>. </span>(2020):
@@ -560,12 +564,12 @@ knowledge is required.
      </li>
      <li class="bibitem" class='enumerate' id='x1-403518'>      Horton,          Richard.          “Offline:          COVID-19
      is not a pandemic.” <span class='ecti-1000'>Lancet (London, England) </span>396. 10255 (2020): 874.
-     DOI: <a href='https://doi.org/10.1016/S0140-6736(20)32000-6' class='url'><span class='ectt-1000'>https://doi.org/10.1016/S0140-6736(20)32000-6</span></a>
+     DOI: <a href='https://doi.org/10.1016/S0140-6736(20)32000-6' class='url'><span class='ectt-1000'>10.1016/S0140-6736(20)32000-6</span></a>
      </li>
      <li class="bibitem" class='enumerate' id='x1-403719'> Moodie, Rob, et al. “Profits and pandemics: prevention of harmful effects
      of                       tobacco,                       alcohol,                       and
      ultra-processed food and drink industries.” <span class='ecti-1000'>The lancet</span> 381. 9867 (2013):
-     670-679.  <a href='http://dx.doi.org/10.1016/S0140-6736(12)62089-3' class='url'><span class='ectt-1000'>http://dx.doi.org/10.1016/S0140-6736(12)62089-3</span></a>
+     670-679.  <a href='https://doi.org/10.1016/S0140-6736(12)62089-3' class='url'><span class='ectt-1000'>10.1016/S0140-6736(12)62089-3</span></a>
                                                                   
 
                                                                   
@@ -573,4 +577,4 @@ knowledge is required.
      <li class="bibitem" class='enumerate' id='x1-403920'> Bernard Stiegler and the Internation collective.  <span class='ecti-1000'>Bifurquer. Il n’y a Pas
      </span><span class='ecti-1000'>d’alternative</span>. Les liens qui libèrent, 2020
      </li></ol>
-     #}
+ 
