--- a/src/_includes/macros/pubCard.njk
+++ b/src/_includes/macros/pubCard.njk
@@ -18,7 +18,7 @@
 {%-elif article.data.bibentry.URL-%}
 {% set srcurl-%}https://image.thum.io/get/width/1200/crop/800/noanimate/{{ article.data.bibentry.URL }}{%-endset%}
 {%-elif article.data.bibentry.DOI-%}
-{% set srcurl-%}https://image.thum.io/get/width/1200/crop/800/noanimate/https://dx.doi.org/{{ article.data.bibentry.DOI }}{%-endset%}
+{% set srcurl-%}https://image.thum.io/get/width/1200/crop/800/noanimate/https://doi.org/{{ article.data.bibentry.DOI }}{%-endset%}
 {%-endif-%} 
 
  
