--- a/src/publications/articles/2013-LM-Extended-Criticality-Enablement/index.njk
+++ b/src/publications/articles/2013-LM-Extended-Criticality-Enablement/index.njk
@@ -817,7 +817,7 @@ excerpt: Biological evolution requires a continual change of the pertinent phase
   </li>
 <li  class="bibitem" id="XAspect">Aspect, A., Grangier, P., &amp; Roger, G. (1982). Experimental realization of Einstein-Podolsky-Rosen-Bohm Gedankenexperiment: A new
     violation of Bell’s inequalities. <span class="cmti-10">Physical Review Letters</span>, <span class="cmti-10">49</span>, 91–94. doi:
-    <a href="http://dx.doi.org/10.1103/PhysRevLett.49.91">10.1103/PhysRevLett.49.91
+    <a href="https://doi.org/10.1103/PhysRevLett.49.91">10.1103/PhysRevLett.49.91
 </a>.
   </li>
 <li  class="bibitem" id="Xbailly1991anneau">Bailly, F. (1991). L’anneau des disciplines. <span class="cmti-10">Revue Internationale de</span>
@@ -828,12 +828,12 @@ excerpt: Biological evolution requires a continual change of the pertinent phase
   </li>
 <li  class="bibitem" id="Xbailly2008">Bailly, F., &amp; Longo, G. (2008). Extended critical situations: the physical singularity of life phenomena.
     <span class="cmti-10">Journal of Biological Systems</span>, <span class="cmti-10">16</span>, 309. doi:
-    <a href="http://dx.doi.org/10.1142/S0218339008002514">10.1142/S0218339008002514
+    <a href="https://doi.org/10.1142/S0218339008002514">10.1142/S0218339008002514
 </a>.
   </li>
 <li  class="bibitem" id="Xbailly2009">Bailly, F., &amp; Longo, G. (2009). Biological organization and anti-entropy.
     <span class="cmti-10">Journal of Biological Systems</span>, <span class="cmti-10">17</span>, 63–96. doi:
-    <a href="http://dx.doi.org/10.1142/S0218339009002715">10.1142/S0218339009002715
+    <a href="https://doi.org/10.1142/S0218339009002715">10.1142/S0218339009002715
 </a>.
   </li>
 <li  class="bibitem" id="Xbailly2011">Bailly, F., &amp; Longo, G. (2011). <span class="cmti-10">Mathematics and the natural sciences; The</span>
@@ -841,7 +841,7 @@ excerpt: Biological evolution requires a continual change of the pertinent phase
   </li>
 <li  class="bibitem" id="Xbailly2011b">Bailly, F., Longo, G., &amp; Montévil, M. (2011). A 2-dimensional geometry for biological time.
     <span class="cmti-10">Progress in Biophysics and Molecular Biology</span>, <span class="cmti-10">106</span>, 474 – 484. doi:
-    <a href="http://dx.doi.org/10.1016/j.pbiomolbio.2011.02.001">10.1016/j.pbiomolbio.2011.02.001
+    <a href="https://doi.org/10.1016/j.pbiomolbio.2011.02.001">10.1016/j.pbiomolbio.2011.02.001
 </a>.
   </li>
 <li  class="bibitem" id="Xbatterman_intertheory">Batterman, R. W. (2007). Intertheory relations in physics. URL:
@@ -849,12 +849,12 @@ excerpt: Biological evolution requires a continual change of the pertinent phase
   </li>
 <li  class="bibitem" id="XBrouzes2004367">Brouzés, E., &amp; Farge, E. (2004). Interplay of mechanical deformation and patterned gene expression in developing embryos.
     <span class="cmti-10">Current Opinion in</span> <span class="cmti-10">Genetics &amp; Development</span>, <span class="cmti-10">14</span>, 367 – 374. doi:
-    <a href="http://dx.doi.org/10.1016/j.gde.2004.06.005">10.1016/j.gde.2004.06.005
+    <a href="https://doi.org/10.1016/j.gde.2004.06.005">10.1016/j.gde.2004.06.005
 </a>.
   </li>
 <li  class="bibitem" id="Xbuiatti2011randomness">Buiatti, M., &amp; Longo, G. (2013). Randomness and multilevel interactions in biology.
     <span class="cmti-10">Theory in Biosciences</span>, <span class="cmti-10">132</span>, 139–158. doi:
-    <a href="http://dx.doi.org/10.1007/s12064-013-0179-2">10.1007/s12064-013-0179-2
+    <a href="https://doi.org/10.1007/s12064-013-0179-2">10.1007/s12064-013-0179-2
 </a>.
   </li>
 <li  class="bibitem" id="XCeron2009">Ceron-Carrasco, J., Requena, A., Perpete, E., &amp; Michaux, D., C.and Jacquemin (2009). Double proton transfer mechanism in the
@@ -871,7 +871,7 @@ excerpt: Biological evolution requires a continual change of the pertinent phase
   </li>
 <li  class="bibitem" id="XEPR">Einstein, A., Podolsky, B., &amp; Rosen, N. (1935). Can quantum-mechanical description of physical reality be considered complete?
     <span class="cmti-10">Physical Review</span>, <span class="cmti-10">47</span>, 777–780. doi:
-    <a href="http://dx.doi.org/10.1103/PhysRev.47.777">10.1103/PhysRev.47.777
+    <a href="https://doi.org/10.1103/PhysRev.47.777">10.1103/PhysRev.47.777
 </a>.
   </li>
 <li  class="bibitem" id="XEngel2007">Engel, G., Calhoun, T., Read, E., Ahn, T., Mançal, T., Yuan-Chung, C., Blankenship, R., &amp; Fleming, G. (2007). Evidence for
@@ -879,7 +879,7 @@ excerpt: Biological evolution requires a continual change of the pertinent phase
   </li>
 <li  class="bibitem" id="XFleury_2000">Fleury, V. (2000). Branching morphogenesis in a reaction-diffusion model. <span class="cmti-10">Phys. Rev. E</span>,
     <span class="cmti-10">61</span>, 4156 – 4160. doi:
-    <a href="http://dx.doi.org/10.1103/PhysRevE.61.4156">10.1103/PhysRevE.61.4156
+    <a href="https://doi.org/10.1103/PhysRevE.61.4156">10.1103/PhysRevE.61.4156
 </a>.
   </li>
 <li  class="bibitem" id="Xgandhi1999spatial">Gandhi, S. P., Heeger, D. J., &amp; Boynton, G. M. (1999). Spatial attention affects brain activity in human
@@ -893,7 +893,7 @@ excerpt: Biological evolution requires a continual change of the pertinent phase
   </li>
 <li  class="bibitem" id="XHeams">Heams, T. (2014). Randomness in biology. <span class="cmti-10">Math. Structures in Comp. Sci.,</span>
     <span class="cmti-10">special issue</span>, <span class="cmti-10">24</span>. doi:
-    <a href="http://dx.doi.org/10.1017/S096012951200076X">10.1017/S096012951200076X
+    <a href="https://doi.org/10.1017/S096012951200076X">10.1017/S096012951200076X
 </a>.
   </li>
 <li  class="bibitem" id="XJeanphyllotaxis">Jean, R. (1994). <span class="cmti-10">Phyllotaxis: A Systemic Study in Plant Morphogenesis</span>. Cambridge Studies in
@@ -920,12 +920,12 @@ excerpt: Biological evolution requires a continual change of the pertinent phase
   </li>
 <li  class="bibitem" id="XAnnickLesne08">Lesne, A. (2008). Robustness: Confronting lessons from physics and biology. <span class="cmti-10">Biol Rev Camb Philos Soc</span>,
     <span class="cmti-10">83</span>, 509 – 532. doi:
-    <a href="http://dx.doi.org/10.1111/j.1469-185X.2008.00052.x">10.1111/j.1469-185X.2008.00052.x
+    <a href="https://doi.org/10.1111/j.1469-185X.2008.00052.x">10.1111/j.1469-185X.2008.00052.x
 </a>.
   </li>
 <li  class="bibitem" id="XLiu_2007">Liu, R., &amp; Ochman, H. (2007). Stepwise formation of the bacterial flagellar system.
     <span class="cmti-10">Proceedings of the National Academy of Sciences</span>, <span class="cmti-10">104</span>, 7116 – 7121. doi:
-    <a href="http://dx.doi.org/10.1073/pnas.0700266104">10.1073/pnas.0700266104
+    <a href="https://doi.org/10.1073/pnas.0700266104">10.1073/pnas.0700266104
 </a>.
   </li>
 <li  class="bibitem" id="Xlongo2011f">Longo, G. (2011). Mathematical infinity ”in prospettiva” and the spaces of possibilities.
@@ -937,40 +937,39 @@ excerpt: Biological evolution requires a continual change of the pertinent phase
   </li>
 <li  class="bibitem" id="Xlongo2012">Longo, G., Miquel, P.-A., Sonnenschein, C., &amp; Soto, A. M. (2012a). Is information a proper observable for biological
     organization? <span class="cmti-10">Progress</span> <span class="cmti-10">in Biophysics and Molecular biology</span>, <span class="cmti-10">109</span>, 108 – 114. doi:
-    <a href="http://dx.doi.org/10.1016/j.pbiomolbio.2012.06.004">10.1016/j.</span> <span class="cmtt-10">pbiomolbio.2012.06.004
+    <a href="https://doi.org/10.1016/j.pbiomolbio.2012.06.004">10.1016/j.</span> <span class="cmtt-10">pbiomolbio.2012.06.004
 </a>.
   </li>
 <li  class="bibitem" id="Xlongo2011d">Longo, G., &amp; Montévil, M. (2012). Randomness increases order in biological evolution. In M. J. Dinneen, B. Khoussainov,
     &amp; A. Nies (Eds.), <span class="cmti-10">Computation, Physics and Beyond: International Workshop on Theoretical</span> <span class="cmti-10">Computer</span>
     <span class="cmti-10">Science, WTCS 2012, Dedicated to Cristian S. Calude on the Occasion of</span> <span class="cmti-10">His 60th Birthday, Auckland, New Zealand, February 21-24, 2012, Revised</span>
-    <span class="cmti-10">Selected and Invited Papers </span>(pp. 289–308). Berlin, Heidelberg: Springer Berlin Heidelberg. URL:
-    <a class="url" href="https://doi.org/10.1007/978-3-642-27654-5_22">https://doi.org/10.1007/978-3-642-27654-5_22</a>. doi:
-    <a href="http://dx.doi.org/10.1007/978-3-642-27654-5_22">10.1007/978-3-642-27654-5_22
+    <span class="cmti-10">Selected and Invited Papers </span>(pp. 289–308). Berlin, Heidelberg: Springer Berlin Heidelberg. doi:
+    <a href="https://doi.org/10.1007/978-3-642-27654-5_22">10.1007/978-3-642-27654-5_22
 </a>.
   </li>
 <li  class="bibitem" id="Xlongo2011c">Longo, G., &amp; Montévil, M. (2011a). From physics to biology by extending criticality and symmetry breakings.
     <span class="cmti-10">Progress in Biophysics and Molecular</span> <span class="cmti-10">Biology</span>, <span class="cmti-10">106</span>, 340 – 347. doi:
-    <a href="http://dx.doi.org/10.1016/j.pbiomolbio.2011.03.005">10.1016/j.pbiomolbio.2011.03.005
+    <a href="https://doi.org/10.1016/j.pbiomolbio.2011.03.005">10.1016/j.pbiomolbio.2011.03.005
 </a>.
   </li>
 <li  class="bibitem" id="Xlongo2011">Longo, G., &amp; Montévil, M. (2011b). Protention and retention in biological systems.
     <span class="cmti-10">Theory in Biosciences</span>, <span class="cmti-10">130</span>, 107–117. doi:
-    <a href="http://dx.doi.org/10.1007/s12064-010-0116-6">10.1007/</span> <span class="cmtt-10">s12064-010-0116-6
+    <a href="https://doi.org/10.1007/s12064-010-0116-6">10.1007/</span> <span class="cmtt-10">s12064-010-0116-6
 </a>.
   </li>
 <li  class="bibitem" id="Xlongo2012b">Longo, G., Montévil, M., &amp; Kauffman, S. (2012b). No entailing laws, but enablement in the evolution of the biosphere. In
     <span class="cmti-10">Genetic and Evolutionary</span> <span class="cmti-10">Computation Conference</span>. GECCO’12 New York, NY, USA: ACM. doi:
-    <a href="http://dx.doi.org/10.1145/2330784.2330946">10.</span> <span class="cmtt-10">1145/2330784.2330946
+    <a href="https://doi.org/10.1145/2330784.2330946">10.</span> <span class="cmtt-10">1145/2330784.2330946
 </a>.
   </li>
 <li  class="bibitem" id="XLongo_2012_From">Longo, G., Montévil, M., &amp; Pocheville, A. (2012c). From bottom-up approaches to levels of organization and extended critical
     transitions. <span class="cmti-10">Frontiers in Physiology</span>, <span class="cmti-10">3</span>. doi:
-    <a href="http://dx.doi.org/10.3389/fphys.2012.00232">10.3389/fphys.2012.00232
+    <a href="https://doi.org/10.3389/fphys.2012.00232">10.3389/fphys.2012.00232
 </a>. Invited paper.
   </li>
 <li  class="bibitem" id="Xlomososo2015">Longo, G., Montévil, M., Sonnenschein, C., &amp; Soto, A. M. (2015). In search of principles for a theory of organisms.
     <span class="cmti-10">Journal of Biosciences</span>, (pp. 1–14). doi:
-    <a href="http://dx.doi.org/10.1007/s12038-015-9574-9">10.1007/s12038-015-9574-9
+    <a href="https://doi.org/10.1007/s12038-015-9574-9">10.1007/s12038-015-9574-9
 </a>.
   </li>
 <li  class="bibitem" id="Xlongorand">Longo, G., Palamidessi, C., &amp; Paul, T. (2010). Some bridging results and challenges in classical, quantum and computational
@@ -980,12 +979,12 @@ excerpt: Biological evolution requires a continual change of the pertinent phase
 <li  class="bibitem" id="Xsoctoext">Lovecchio, E., Allegrini, P., Geneston, E., West, B. J., &amp; Grigolini, P. (2012). From self-organized to extended criticality.
     <span class="cmti-10">Frontiers in Physiology</span>, <span class="cmti-10">3</span>. URL:
     <a class="url" href="http://www.frontiersin.org/fractal_physiology/10.3389/fphys.2012.00098/abstract">http://www.frontiersin.org/fractal_physiology/10.3389/fphys.2012.00098/abstract</a>. doi:
-    <a href="http://dx.doi.org/10.3389/fphys.2012.00098">10.3389/fphys.2012.00098
+    <a href="https://doi.org/10.3389/fphys.2012.00098">10.3389/fphys.2012.00098
 </a>.
   </li>
 <li  class="bibitem" id="XMachta2011">Machta, B. B., Papanikolaou, S., Sethna, J. P., &amp; Veatch, S. L. (2011). A minimal model of plasma membrane
     heterogeneity requires coupling cortical actin to criticality. <span class="cmti-10">Biophysical journal</span>, <span class="cmti-10">100</span>, 1668–1677. doi:
-    <a href="http://dx.doi.org/10.1016/j.bpj.2011.02.029">10.1016/j.bpj.</span> <span class="cmtt-10">2011.02.029
+    <a href="https://doi.org/10.1016/j.bpj.2011.02.029">10.1016/j.bpj.</span> <span class="cmtt-10">2011.02.029
 </a>.
   </li>
 <li  class="bibitem" id="XMichl2006">Michl, M., Ouyang, N., Fraek, M.-L., Beck, F.-X., &amp; Neuhofer, W. (2006). Expression and regulation of
@@ -995,7 +994,7 @@ excerpt: Biological evolution requires a continual change of the pertinent phase
       <mi>β</mi>
     </math>-crystallin in the kidney in vivo and in vitro. <span class="cmti-10">Pfl</span><span class="cmti-10">ü</span>
     <span class="cmti-10">gers Archiv</span>, <span class="cmti-10">452</span>, 387–395. doi:
-    <a href="http://dx.doi.org/10.1007/s00424-005-0033-6">10.1007/s00424-005-0033-6
+    <a href="https://doi.org/10.1007/s00424-005-0033-6">10.1007/s00424-005-0033-6
 </a>.
   </li>
 <li  class="bibitem" id="Xmossio2010">Mossio, M., &amp; Moreno, A. (2010). Organisational closure in biological organisms.
@@ -1003,7 +1002,7 @@ excerpt: Biological evolution requires a continual change of the pertinent phase
   </li>
 <li  class="bibitem" id="Xdenis2009">Noble, D. (2009). Could there be a synthesis between western and oriental medicine, and with sasang constitutional medicine in
     particular? <span class="cmti-10">Evidence-Based Complementary and Alternative Medicine</span>, <span class="cmti-10">6</span>, 5–10. doi:
-    <a href="http://dx.doi.org/10.1093/ecam/nep101">10.</span> <span class="cmtt-10">1093/ecam/nep101
+    <a href="https://doi.org/10.1093/ecam/nep101">10.</span> <span class="cmtt-10">1093/ecam/nep101
 </a>.
   </li>
 <li  class="bibitem" id="XPaldi2003">Paldi, A. (2003). Stochastic gene expression during cell differentiation: order from disorder?
@@ -1011,12 +1010,12 @@ excerpt: Biological evolution requires a continual change of the pertinent phase
   </li>
 <li  class="bibitem" id="Xpetitot2003">Petitot, J. (2003). The neurogeometry of pinwheels as a sub-riemannian contact structure.
     <span class="cmti-10">Journal of Physiology, Paris</span>, <span class="cmti-10">97</span>, 265–309. doi:
-    <a href="http://dx.doi.org/10.1016/j.jphysparis.2003.10.010">10.1016/</span> <span class="cmtt-10">j.jphysparis.2003.10.010
+    <a href="https://doi.org/10.1016/j.jphysparis.2003.10.010">10.1016/</span> <span class="cmtt-10">j.jphysparis.2003.10.010
 </a>.
   </li>
 <li  class="bibitem" id="Xrobert">Robert, L., Paul, G., Chen, Y., Taddei, F., Baigl, D., &amp; Lindner, A. B. (2010). Pre-dispositions and epigenetic inheritance in
     the escherichia coli lactose operon bistable switch. <span class="cmti-10">Mol Syst Biol</span>, <span class="cmti-10">6</span>. doi:
-    <a href="http://dx.doi.org/10.1038/msb.2010.12">10.1038/msb.2010.12
+    <a href="https://doi.org/10.1038/msb.2010.12">10.1038/msb.2010.12
 </a>.
   </li>
 <li  class="bibitem" id="XSethna_2006">Sethna, J. P. (2006). <span class="cmti-10">Statistical mechanics: Entropy, order parameters, and</span>
@@ -1027,23 +1026,23 @@ excerpt: Biological evolution requires a continual change of the pertinent phase
   </li>
 <li  class="bibitem" id="XStrocchi_2005">Strocchi, F. (2005). <span class="cmti-10">Symmetry breaking </span>volume 732 of <span class="cmti-10">Lecture Notes in</span>
     <span class="cmti-10">Physics</span>. Heidelberg: Springer Verlag. doi:
-    <a href="http://dx.doi.org/10.1007/b95211">10.1007/b95211
+    <a href="https://doi.org/10.1007/b95211">10.1007/b95211
 </a>.
   </li>
 <li  class="bibitem" id="Xvan1989laws">Van Fraassen, B. (1989). <span class="cmti-10">Laws and symmetry</span>. Oxford University Press, USA.</li>
 <li  class="bibitem" id="XVarela1974187">Varela, F., Maturana, H., &amp; Uribe, R. (1974). Autopoiesis: The organization of living systems, its characterization and a
     model. <span class="cmti-10">Biosystems</span>, <span class="cmti-10">5</span>, 187 – 196. doi:
-    <a href="http://dx.doi.org/10.1016/0303-2647(74)90031-8">10.1016/0303-2647(74)90031-8
+    <a href="https://doi.org/10.1016/0303-2647(74)90031-8">10.1016/0303-2647(74)90031-8
 </a>.
   </li>
 <li  class="bibitem" id="XWeiss1992">Weiss, V. (1992). Major genes of general intelligence. <span class="cmti-10">Personality</span>
     <span class="cmti-10">and Individual Differences</span>, <span class="cmti-10">13</span>, 1115 – 1134. doi:
-    <a href="http://dx.doi.org/10.1016/0191-8869(92)90026-L">10.1016/0191-8869(92)</span> <span class="cmtt-10">90026-L
+    <a href="https://doi.org/10.1016/0191-8869(92)90026-L">10.1016/0191-8869(92)</span> <span class="cmtt-10">90026-L
 </a>.
   </li>
 <li  class="bibitem" id="XWerner_2010">Werner, G. (2010). Fractals in the nervous system: conceptual implications for theoretical neuroscience.
     <span class="cmti-10">Frontiers in Physiology</span>, <span class="cmti-10">1</span>. doi:
-    <a href="http://dx.doi.org/10.3389/fphys.2010.00015">10.3389/fphys.</span> <span class="cmtt-10">2010.00015
+    <a href="https://doi.org/10.3389/fphys.2010.00015">10.3389/fphys.</span> <span class="cmtt-10">2010.00015
 </a>.
   </li>
 <li  class="bibitem" id="XWerner_2011_Consciousness">Werner, G. (2011). Consciousness viewed in the framework of brain phase space dynamics, criticality, and the
@@ -1055,7 +1054,7 @@ excerpt: Biological evolution requires a continual change of the pertinent phase
 <li  class="bibitem" id="Xweyl1983symmetry">Weyl, H. (1983). <span class="cmti-10">Symmetry</span>. Princeton: Princeton University Press.</li>
 <li  class="bibitem" id="XWinkler2005">Winkler, J. R., Gray, H. B., Prytkova, T. R., Kurnikov, I. V., &amp; Beratan, D. N. (2005). Electron
     transfer through proteins. In <span class="cmti-10">Bioelectronics </span>(pp. 15–33). Wiley-VCH Verlag GmbH and Co. KGaA. doi:
-    <a href="http://dx.doi.org/10.1002/352760376X.ch2">10.1002/352760376X.</span> <span class="cmtt-10">ch2
+    <a href="https://doi.org/10.1002/352760376X.ch2">10.1002/352760376X.</span> <span class="cmtt-10">ch2
 </a>.
   </li>
 </ol>
